@@ -6,10 +6,11 @@
  */
 package com.powsybl.nad.model;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Objects;
+import com.powsybl.nad.build.iidm.IdProvider;
+import com.powsybl.nad.svg.EdgeInfo;
+import com.powsybl.nad.svg.SvgEdgeInfo;
+
+import java.util.*;
 
 /**
  * @author Florian Dupuy {@literal <florian.dupuy at rte-france.com>}
@@ -31,22 +32,28 @@ public class BranchEdge extends AbstractEdge {
     public static final String TWO_WT_EDGE = "TwoWtEdge";
     public static final String PST_EDGE = "PstEdge";
     public static final String LINE_EDGE = "LineEdge";
-    public static final String HVDC_LINE_EDGE = "HvdcLineEdge";
-    public static final String DANGLING_LINE_EDGE = "DanglingLineEdge";
+    public static final String HVDC_LINE_LCC_EDGE = "HvdcLineLccEdge";
+    public static final String HVDC_LINE_VSC_EDGE = "HvdcLineVscEdge";
+    public static final String BOUNDARY_LINE_EDGE = "BoundaryLineEdge";
     public static final String TIE_LINE_EDGE = "TieLineEdge";
 
     private List<Point> points1 = Collections.emptyList();
     private List<Point> points2 = Collections.emptyList();
+    private Point arrowPoint1 = new Point();
+    private Point arrowPoint2 = new Point();
+    private double arrowAngle1;
+    private double arrowAngle2;
     private final boolean[] visible = new boolean[] {true, true};
-    private final String type;
+    private final SvgEdgeInfo svgEdgeInfo1;
+    private final SvgEdgeInfo svgEdgeInfo2;
+    private final SvgEdgeInfo svgEdgeInfoMiddle;
 
-    public BranchEdge(String diagramId, String equipmentId, String nameOrId, String type) {
-        super(diagramId, equipmentId, nameOrId);
-        this.type = type;
-    }
-
-    public String getType() {
-        return type;
+    public BranchEdge(IdProvider idProvider, String equipmentId, String nameOrId, String type,
+                      EdgeInfo edgeInfo1, EdgeInfo edgeInfo2, EdgeInfo edgeInfoMiddle) {
+        super(idProvider.createSvgId(equipmentId), equipmentId, nameOrId, type);
+        this.svgEdgeInfo1 = isEdgeInfoNotEmptyNorNull(edgeInfo1) ? new SvgEdgeInfo(idProvider.createSvgId(equipmentId), edgeInfo1) : null;
+        this.svgEdgeInfo2 = isEdgeInfoNotEmptyNorNull(edgeInfo2) ? new SvgEdgeInfo(idProvider.createSvgId(equipmentId), edgeInfo2) : null;
+        this.svgEdgeInfoMiddle = isEdgeInfoNotEmptyNorNull(edgeInfoMiddle) ? new SvgEdgeInfo(idProvider.createSvgId(equipmentId), edgeInfoMiddle) : null;
     }
 
     public boolean isTransformerEdge() {
@@ -64,6 +71,10 @@ public class BranchEdge extends AbstractEdge {
 
     public List<Point> getPoints2() {
         return Collections.unmodifiableList(points2);
+    }
+
+    public Point getMiddlePoint() {
+        return Point.createMiddlePoint(points1.getLast(), points2.getLast());
     }
 
     public void setPoints(Side side, Point... points) {
@@ -85,6 +96,50 @@ public class BranchEdge extends AbstractEdge {
         this.points2 = Arrays.asList(points);
     }
 
+    public Point getArrow(Side side) {
+        Objects.requireNonNull(side);
+        return side == Side.ONE ? getArrowPoint1() : getArrowPoint2();
+    }
+
+    public Point getArrowPoint1() {
+        return arrowPoint1;
+    }
+
+    public Point getArrowPoint2() {
+        return arrowPoint2;
+    }
+
+    public void setArrow(Side side, Point arrow) {
+        Objects.requireNonNull(side);
+        if (side == Side.ONE) {
+            setArrowPoint1(arrow);
+        } else {
+            setArrowPoint2(arrow);
+        }
+    }
+
+    public void setArrowPoint1(Point arrowPoint1) {
+        this.arrowPoint1 = arrowPoint1;
+    }
+
+    public void setArrowPoint2(Point arrowPoint2) {
+        this.arrowPoint2 = arrowPoint2;
+    }
+
+    public void setArrowAngle(Side side, double edgeStartAngle) {
+        Objects.requireNonNull(side);
+        if (side == Side.ONE) {
+            this.arrowAngle1 = edgeStartAngle;
+        } else {
+            this.arrowAngle2 = edgeStartAngle;
+        }
+    }
+
+    public double getArrowAngle(Side side) {
+        Objects.requireNonNull(side);
+        return side == Side.ONE ? arrowAngle1 : arrowAngle2;
+    }
+
     public boolean isVisible(Side side) {
         Objects.requireNonNull(side);
         return visible[side.ordinal()];
@@ -102,6 +157,19 @@ public class BranchEdge extends AbstractEdge {
 
     public double getEdgeEndAngle(Side side) {
         List<Point> points = getPoints(side);
-        return points.get(points.size() - 2).getAngle(points.get(points.size() - 1));
+        return points.get(points.size() - 2).getAngle(points.getLast());
+    }
+
+    public Optional<SvgEdgeInfo> getSvgEdgeInfo(Side side) {
+        Objects.requireNonNull(side);
+        return Optional.ofNullable(side == Side.ONE ? svgEdgeInfo1 : svgEdgeInfo2);
+    }
+
+    public Optional<SvgEdgeInfo> getSvgEdgeInfoMiddle() {
+        return Optional.ofNullable(svgEdgeInfoMiddle);
+    }
+
+    private static boolean isEdgeInfoNotEmptyNorNull(EdgeInfo edgeInfo) {
+        return edgeInfo != null && (edgeInfo.getInfoTypeB() != null || edgeInfo.getInfoTypeA() != null);
     }
 }
