@@ -1,20 +1,32 @@
 /**
- * Copyright (c) 2021, RTE (http://www.rte-france.com)
+ * Copyright (c) 2021-2025, RTE (http://www.rte-france.com)
  * This Source Code Form is subject to the terms of the Mozilla Public
  * License, v. 2.0. If a copy of the MPL was not distributed with this
  * file, You can obtain one at http://mozilla.org/MPL/2.0/.
  */
 package com.powsybl.nad.svg;
 
+import com.powsybl.commons.PowsyblException;
 import com.powsybl.commons.exceptions.UncheckedXmlStreamException;
 import com.powsybl.commons.xml.XmlUtil;
+import com.powsybl.diagram.components.ComponentSize;
+import com.powsybl.diagram.util.CssUtil;
+import com.powsybl.nad.library.NadComponentLibrary;
 import com.powsybl.nad.model.*;
-import com.powsybl.nad.svg.metadata.DiagramMetadata;
+import com.powsybl.nad.routing.EdgeRouting;
+import com.powsybl.nad.utils.RadiusUtils;
 import org.apache.commons.io.output.WriterOutputStream;
+import org.apache.commons.lang3.StringUtils;
 import org.jgrapht.alg.util.Pair;
+import org.w3c.dom.Element;
 
 import javax.xml.stream.XMLStreamException;
 import javax.xml.stream.XMLStreamWriter;
+import javax.xml.transform.Result;
+import javax.xml.transform.Transformer;
+import javax.xml.transform.TransformerException;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.sax.SAXResult;
 import java.io.*;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -30,46 +42,46 @@ import java.util.stream.Stream;
 public class SvgWriter {
 
     private static final String INDENT = "    ";
-    public static final String SVG_NAMESPACE_URI = "http://www.w3.org/2000/svg";
-    public static final String XHTML_NAMESPACE_URI = "http://www.w3.org/1999/xhtml";
+    private static final String SVG_NAMESPACE_URI = "http://www.w3.org/2000/svg";
+    private static final String XHTML_NAMESPACE_URI = "http://www.w3.org/1999/xhtml";
     private static final String SVG_ROOT_ELEMENT_NAME = "svg";
     private static final String STYLE_ELEMENT_NAME = "style";
-    private static final String METADATA_ELEMENT_NAME = "metadata";
     private static final String GROUP_ELEMENT_NAME = "g";
     private static final String POLYLINE_ELEMENT_NAME = "polyline";
     private static final String PATH_ELEMENT_NAME = "path";
     private static final String CIRCLE_ELEMENT_NAME = "circle";
     private static final String TEXT_ELEMENT_NAME = "text";
-    private static final String TSPAN_ELEMENT_NAME = "tspan";
     private static final String FOREIGN_OBJECT_ELEMENT_NAME = "foreignObject";
     private static final String DIV_ELEMENT_NAME = "div";
-    private static final String TABLE_ELEMENT_NAME = "table";
-    private static final String TABLE_ROW_ELEMENT_NAME = "tr";
-    private static final String TABLE_DATA_ELEMENT_NAME = "td";
+    private static final String SPAN_ELEMENT_NAME = "span";
+    private static final String USE_ELEMENT_NAME = "use";
     private static final String ID_ATTRIBUTE = "id";
     private static final String WIDTH_ATTRIBUTE = "width";
     private static final String HEIGHT_ATTRIBUTE = "height";
     private static final String VIEW_BOX_ATTRIBUTE = "viewBox";
     private static final String DESCRIPTION_ATTRIBUTE = "desc";
     private static final String CLASS_ATTRIBUTE = "class";
+    private static final String STYLE_ATTRIBUTE = "style";
     private static final String TRANSFORM_ATTRIBUTE = "transform";
     private static final String CIRCLE_RADIUS_ATTRIBUTE = "r";
     private static final String PATH_D_ATTRIBUTE = "d";
     private static final String X_ATTRIBUTE = "x";
     private static final String Y_ATTRIBUTE = "y";
-    private static final String DY_ATTRIBUTE = "dy";
     private static final String POINTS_ATTRIBUTE = "points";
+    private static final String HREF_ATTRIBUTE = "href";
+    private static final String TEXT_ANCHOR_MIDDLE = "text-anchor:middle";
 
     private final SvgParameters svgParameters;
     private final StyleProvider styleProvider;
-    private final LabelProvider labelProvider;
-    private final EdgeRendering edgeRendering;
+    private final EdgeRouting edgeRouting;
+    private final NadComponentLibrary componentLibrary;
 
-    public SvgWriter(SvgParameters svgParameters, StyleProvider styleProvider, LabelProvider labelProvider) {
+    public SvgWriter(SvgParameters svgParameters, StyleProvider styleProvider,
+                     NadComponentLibrary componentLibrary, EdgeRouting edgeRouting) {
         this.svgParameters = Objects.requireNonNull(svgParameters);
         this.styleProvider = Objects.requireNonNull(styleProvider);
-        this.labelProvider = Objects.requireNonNull(labelProvider);
-        this.edgeRendering = new DefaultEdgeRendering();
+        this.componentLibrary = Objects.requireNonNull(componentLibrary);
+        this.edgeRouting = Objects.requireNonNull(edgeRouting);
     }
 
     public void writeSvg(Graph graph, Path svgFile) {
@@ -87,7 +99,10 @@ public class SvgWriter {
     }
 
     public void writeSvg(Graph graph, Writer svgWriter) {
-        try (WriterOutputStream svgOs = new WriterOutputStream(svgWriter, StandardCharsets.UTF_8)) {
+        try (WriterOutputStream svgOs = WriterOutputStream.builder()
+            .setWriter(svgWriter)
+            .setCharset(StandardCharsets.UTF_8)
+            .get()) {
             writeSvg(graph, svgOs);
         } catch (IOException e) {
             throw new UncheckedIOException(e);
@@ -99,23 +114,149 @@ public class SvgWriter {
         Objects.requireNonNull(svgOs);
 
         // Edge coordinates need to be computed first, based on svg parameters
-        edgeRendering.run(graph, svgParameters);
+        edgeRouting.run(graph, svgParameters);
 
         try {
             XMLStreamWriter writer = XmlUtil.initializeWriter(true, INDENT, svgOs);
             addSvgRoot(graph, writer);
             addStyle(writer);
-            addMetadata(graph, writer);
+            if (this.svgParameters.isHighlightGraph()) {
+                drawHighlightedSection(graph, writer);
+            }
             drawVoltageLevelNodes(graph, writer);
+            drawInjections(graph, writer);
             drawBranchEdges(graph, writer);
             drawThreeWtEdges(graph, writer);
             drawThreeWtNodes(graph, writer);
-            drawTextEdges(graph, writer);
-            drawTextNodes(graph, writer);
+            if (svgParameters.isEdgeInfosIncluded()) {
+                drawEdgeInfos(graph, writer);
+            }
+            if (svgParameters.isVoltageLevelLegendsIncluded()) {
+                drawTextEdges(graph, writer);
+                drawTextNodes(graph, writer);
+            }
+
             writer.writeEndDocument();
         } catch (XMLStreamException e) {
             throw new UncheckedXmlStreamException(e);
         }
+    }
+
+    private void drawHighlightedSection(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.HIGHLIGHT_CLASS);
+        drawHighlightVoltageLevelNodes(graph, writer);
+        drawHighlightBranchEdges(graph, writer);
+        drawHighlightThreeWtEdges(graph, writer);
+        writer.writeEndElement();
+    }
+
+    private void drawInjections(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
+        if (!graph.getInjections().isEmpty()) {
+            writer.writeStartElement(GROUP_ELEMENT_NAME);
+            writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.INJECTIONS_CLASS);
+            for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).toList()) {
+                drawInjections(vlNode, writer);
+            }
+            writer.writeEndElement();
+        }
+    }
+
+    private void drawInjections(VoltageLevelNode vlNode, XMLStreamWriter writer) throws XMLStreamException {
+        if (vlNode.getBusNodes().stream().mapToInt(BusNode::getInjectionCount).anyMatch(nb -> nb > 0)) {
+            writer.writeStartElement(GROUP_ELEMENT_NAME);
+            writeStyleClasses(writer, styleProvider.getNodeStyleClasses(vlNode));
+            for (BusNode busNode : vlNode.getBusNodes()) {
+                drawInjections(busNode, writer);
+            }
+            writer.writeEndElement();
+        }
+    }
+
+    private void drawInjections(BusNode busNode, XMLStreamWriter writer) throws XMLStreamException {
+        if (busNode.getInjectionCount() == 0) {
+            return;
+        }
+
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writeStyleClasses(writer, styleProvider.getBusNodeStyleClasses(busNode));
+        for (Injection injection : busNode.getInjections()) {
+            writer.writeStartElement(GROUP_ELEMENT_NAME);
+            writeId(writer, injection);
+            writeStyleClasses(writer, styleProvider.getInjectionStyleClasses(injection));
+            writeStyleAttribute(writer, styleProvider.getInjectionStyle(injection));
+            insertName(writer, injection::getName);
+            drawInjectionEdge(injection, writer);
+            drawInjectionIcon(injection, writer);
+            writer.writeEndElement();
+        }
+        writer.writeEndElement();
+
+    }
+
+    private void drawInjectionEdge(Injection injection, XMLStreamWriter writer) throws XMLStreamException {
+        writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
+        writeStyleClasses(writer, StyleProvider.EDGE_PATH_CLASS);
+        writer.writeAttribute(POINTS_ATTRIBUTE, getPolylinePointsString(injection.getEdge()));
+    }
+
+    private void drawInjectionIcon(Injection injection, XMLStreamWriter writer) throws XMLStreamException {
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+
+        writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
+        double radius = svgParameters.getInjectionCircleRadius();
+        Point circleCenter = injection.getInjectionPoint().atDistance(-radius, injection.getBusNodePoint());
+        writer.writeAttribute("cx", getFormattedValue(circleCenter.x()));
+        writer.writeAttribute("cy", getFormattedValue(circleCenter.y()));
+        writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(radius));
+
+        insertSvgComponent(injection, writer);
+
+        writer.writeEndElement();
+    }
+
+    private void insertSvgComponent(Injection injection, XMLStreamWriter writer) throws XMLStreamException {
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(injection.getIconOrigin(svgParameters.getInjectionCircleRadius())));
+
+        String componentType = injection.getComponentType();
+        writeSvgComponent(writer, componentType, "Cannot insert SVG for injection of type " + injection.getType());
+    }
+
+    private void drawComponentOnBranchEdgeMiddle(XMLStreamWriter writer, String componentType) throws XMLStreamException {
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        ComponentSize componentSize = componentLibrary.getComponentsSize().getOrDefault(componentType, null);
+
+        if (componentSize == null) {
+            throw new PowsyblException("Cannot find size for component of type " + componentType);
+        }
+        Point trans = new Point(-componentSize.width() / 2, -componentSize.height() / 2);
+        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(trans));
+
+        writeSvgComponent(writer, componentType, "Cannot insert SVG component of type " + componentType + " on branch edge middle");
+    }
+
+    private void writeSvgComponent(XMLStreamWriter writer, String componentType, String errorMessage) throws XMLStreamException {
+        Result result = new SAXResult(new SvgContentHandlerToXMLStreamWriter(writer));
+        writeStyleClasses(writer, componentLibrary.getComponentStyleClass(componentType).map(List::of).orElse(List.of()));
+
+        try {
+            Transformer transformer = componentLibrary.getSvgTransformer();
+            Map<String, List<Element>> subComponents = componentLibrary.getSvgElements(componentType);
+            if (subComponents != null) {
+                for (Map.Entry<String, List<Element>> scEntry : subComponents.entrySet()) {
+                    List<String> edgeStyleClasses = componentLibrary.getSubComponentStyleClass(componentType, scEntry.getKey())
+                        .map(List::of).orElse(List.of());
+                    writeStyleClasses(writer, edgeStyleClasses);
+                    for (Element element : scEntry.getValue()) {
+                        transformer.transform(new DOMSource(element), result);
+                    }
+                }
+            }
+        } catch (TransformerException e) {
+            throw new PowsyblException(errorMessage, e);
+        }
+        writer.writeEndElement();
     }
 
     private void drawBranchEdges(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
@@ -124,55 +265,34 @@ public class SvgWriter {
         for (BranchEdge edge : graph.getBranchEdges()) {
             writer.writeStartElement(GROUP_ELEMENT_NAME);
             writeId(writer, edge);
-            writeStyleClasses(writer, styleProvider.getEdgeStyleClasses(edge));
+            writeStyleClasses(writer, styleProvider.getBranchEdgeStyleClasses(edge));
             insertName(writer, edge::getName);
-
             drawHalfEdge(graph, writer, edge, BranchEdge.Side.ONE);
             drawHalfEdge(graph, writer, edge, BranchEdge.Side.TWO);
-
             drawEdgeCenter(writer, edge);
-
             writer.writeEndElement();
         }
         writer.writeEndElement();
     }
 
-    private void drawEdgeLabel(XMLStreamWriter writer, BranchEdge edge) throws XMLStreamException {
-
-        String edgeLabel = labelProvider.getLabel(edge);
-
-        if (edgeLabel == null || edgeLabel.isEmpty()) {
-            return;
-        }
-
-        List<Point> points1 = edge.getPoints1();
-        List<Point> points2 = edge.getPoints2();
-        Point anchorPoint = Point.createMiddlePoint(points1.get(points1.size() - 1), points2.get(points2.size() - 1));
-
+    private void drawHighlightBranchEdges(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
         writer.writeStartElement(GROUP_ELEMENT_NAME);
-        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.EDGE_LABEL_CLASS);
-        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(anchorPoint));
-
-        if (edge.isVisible(BranchEdge.Side.ONE) && edge.isVisible(BranchEdge.Side.TWO)) {
-            drawEdgeMiddleLabel(edgeLabel, edge, writer);
-        } else if (edge.isVisible(BranchEdge.Side.ONE)) {
-            drawHalfEdgeLabel(edgeLabel, edge, BranchEdge.Side.ONE, writer);
-        } else {
-            drawHalfEdgeLabel(edgeLabel, edge, BranchEdge.Side.TWO, writer);
+        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.BRANCH_EDGES_CLASS);
+        for (BranchEdge edge : graph.getBranchEdges()) {
+            drawHighlightHalfEdge(graph, writer, edge, BranchEdge.Side.ONE);
+            drawHighlightHalfEdge(graph, writer, edge, BranchEdge.Side.TWO);
         }
-
         writer.writeEndElement();
     }
 
-    private void drawEdgeMiddleLabel(String edgeLabel, BranchEdge edge, XMLStreamWriter writer) throws XMLStreamException {
-        double edgeEndAngle = edge.getEdgeEndAngle(BranchEdge.Side.ONE);
-        drawLabel(writer, edgeLabel, 0, "text-anchor:middle", computeTextAngle(edgeEndAngle), X_ATTRIBUTE);
+    private void drawEdgeMiddleLabel(String edgeLabel, double edgeEndAngle, XMLStreamWriter writer, List<String> classes) throws XMLStreamException {
+        drawLabel(writer, edgeLabel, 0, TEXT_ANCHOR_MIDDLE, computeTextAngle(edgeEndAngle), X_ATTRIBUTE, classes);
     }
 
-    private void drawHalfEdgeLabel(String edgeLabel, BranchEdge edge, BranchEdge.Side side, XMLStreamWriter writer) throws XMLStreamException {
+    private void drawHalfEdgeLabel(String edgeLabel, BranchEdge edge, BranchEdge.Side side, XMLStreamWriter writer,
+                                   List<String> classes) throws XMLStreamException {
         double edgeEndAngle = edge.getEdgeEndAngle(side);
-        String style = Math.cos(edgeEndAngle) < 0 ? "text-anchor:end" : "text-anchor:start";
-        drawLabel(writer, edgeLabel, 0, style, computeTextAngle(edgeEndAngle), X_ATTRIBUTE);
+        drawLabel(writer, edgeLabel, 0, TEXT_ANCHOR_MIDDLE, computeTextAngle(edgeEndAngle), X_ATTRIBUTE, classes);
     }
 
     private double computeTextAngle(double edgeEndAngle) {
@@ -180,25 +300,20 @@ public class SvgWriter {
     }
 
     private void drawEdgeCenter(XMLStreamWriter writer, BranchEdge edge) throws XMLStreamException {
-        if (BranchEdge.DANGLING_LINE_EDGE.equals(edge.getType())) {
+        if (BranchEdge.BOUNDARY_LINE_EDGE.equals(edge.getType())) {
             return;
         }
-        if (!BranchEdge.LINE_EDGE.equals(edge.getType()) || svgParameters.isEdgeNameDisplayed()) {
+        if (!BranchEdge.LINE_EDGE.equals(edge.getType())) {
             writer.writeStartElement(GROUP_ELEMENT_NAME);
-            writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.GLUED_CENTER_CLASS);
             switch (edge.getType()) {
-                case BranchEdge.PST_EDGE:
-                case BranchEdge.TWO_WT_EDGE:
+                case BranchEdge.PST_EDGE, BranchEdge.TWO_WT_EDGE:
                     draw2Wt(writer, edge);
                     break;
-                case BranchEdge.HVDC_LINE_EDGE:
+                case BranchEdge.HVDC_LINE_LCC_EDGE, BranchEdge.HVDC_LINE_VSC_EDGE:
                     drawConverterStation(writer, edge);
                     break;
                 default:
                     break;
-            }
-            if (svgParameters.isEdgeNameDisplayed()) {
-                drawEdgeLabel(writer, edge);
             }
             writer.writeEndElement();
         }
@@ -226,7 +341,7 @@ public class SvgWriter {
             points.add(line2.get(1).atDistance(halfWidth, line2.get(0)));
         }
         String lineFormatted = points.stream()
-                .map(point -> getFormattedValue(point.getX()) + "," + getFormattedValue(point.getY()))
+                .map(point -> getFormattedValue(point.x()) + "," + getFormattedValue(point.y()))
                 .collect(Collectors.joining(" "));
         writer.writeAttribute(POINTS_ATTRIBUTE, lineFormatted);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.HVDC_CLASS);
@@ -241,7 +356,21 @@ public class SvgWriter {
         writer.writeStartElement(GROUP_ELEMENT_NAME);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.THREE_WT_EDGES_CLASS);
         for (ThreeWtEdge edge : threeWtEdges) {
-            drawThreeWtEdge(graph, writer, edge);
+            drawThreeWtEdge(writer, edge);
+        }
+        writer.writeEndElement();
+    }
+
+    private void drawHighlightThreeWtEdges(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
+        List<ThreeWtEdge> threeWtEdges = graph.getThreeWtEdges();
+        if (threeWtEdges.isEmpty()) {
+            return;
+        }
+
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.THREE_WT_EDGES_CLASS);
+        for (ThreeWtEdge edge : threeWtEdges) {
+            drawHighlightThreeWtEdge(writer, edge);
         }
         writer.writeEndElement();
     }
@@ -251,28 +380,40 @@ public class SvgWriter {
         if (!edge.isVisible(side) && !(edge.isTransformerEdge())) {
             return;
         }
-        writer.writeStartElement(GROUP_ELEMENT_NAME);
-        writer.writeAttribute(ID_ATTRIBUTE, getPrefixedId(edge.getDiagramId() + "." + side.getNum()));
-        writeStyleClasses(writer, styleProvider.getSideEdgeStyleClasses(edge, side));
         if (edge.isVisible(side)) {
-            Optional<EdgeInfo> edgeInfo = labelProvider.getEdgeInfo(graph, edge, side);
-            if (!graph.isLoop(edge)) {
-                writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
-                writeStyleClasses(writer, StyleProvider.EDGE_PATH_CLASS, StyleProvider.STRETCHABLE_CLASS, StyleProvider.GLUED_CLASS + "-" + side.getNum());
-                writer.writeAttribute(POINTS_ATTRIBUTE, getPolylinePointsString(edge, side));
-                if (edgeInfo.isPresent()) {
-                    drawBranchEdgeInfo(graph, writer, edge, side, edgeInfo.get());
-                }
+            if (graph.isNotALoop(edge)) {
+                drawHalfEdge(writer, edge, side);
             } else {
-                writer.writeEmptyElement(PATH_ELEMENT_NAME);
-                writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.EDGE_PATH_CLASS);
-                writer.writeAttribute(PATH_D_ATTRIBUTE, getLoopPathString(edge, side));
-                if (edgeInfo.isPresent()) {
-                    drawLoopEdgeInfo(writer, edge, side, edgeInfo.get());
-                }
+                drawLoopEdge(writer, edge, side);
             }
         }
-        writer.writeEndElement();
+    }
+
+    private void drawHalfEdge(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
+        writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
+        writeStyleClasses(writer, styleProvider.getSideEdgeStyleClasses(edge, side), StyleProvider.EDGE_PATH_CLASS);
+        writeStyleAttribute(writer, styleProvider.getSideEdgeStyle(edge, side));
+        writer.writeAttribute(POINTS_ATTRIBUTE, getPolylinePointsString(edge, side));
+
+    }
+
+    private void drawHighlightHalfEdge(Graph graph, XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
+        if (edge.isVisible(side) && graph.isNotALoop(edge)) {
+            drawHighlightHalfEdge(writer, edge, side);
+        }
+    }
+
+    private void drawHighlightHalfEdge(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
+        writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
+        writeStyleClasses(writer, styleProvider.getHighlightSideEdgeStyleClasses(edge, side));
+        writer.writeAttribute(POINTS_ATTRIBUTE, getPolylinePointsString(edge, side));
+    }
+
+    private void drawLoopEdge(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
+        writer.writeEmptyElement(PATH_ELEMENT_NAME);
+        writeStyleClasses(writer, styleProvider.getSideEdgeStyleClasses(edge, side), StyleProvider.EDGE_PATH_CLASS);
+        writer.writeAttribute(PATH_D_ATTRIBUTE, getLoopPathString(edge, side));
+        writeStyleAttribute(writer, styleProvider.getSideEdgeStyle(edge, side));
     }
 
     private String getPolylinePointsString(BranchEdge edge, BranchEdge.Side side) {
@@ -285,38 +426,44 @@ public class SvgWriter {
 
     private String getPolylinePointsString(List<Point> points) {
         return points.stream()
-                .map(point -> getFormattedValue(point.getX()) + "," + getFormattedValue(point.getY()))
+                .map(point -> getFormattedValue(point.x()) + "," + getFormattedValue(point.y()))
                 .collect(Collectors.joining(" "));
     }
 
     private String getLoopPathString(BranchEdge edge, BranchEdge.Side side) {
-        Object[] points = edge.getPoints(side).stream().flatMap(p -> Stream.of(p.getX(), p.getY())).toArray();
+        Object[] points = edge.getPoints(side).stream().flatMap(p -> Stream.of(p.x(), p.y())).toArray();
         return String.format(Locale.US, "M%.2f,%.2f L%.2f,%.2f C%.2f,%.2f %.2f,%.2f %.2f,%.2f", points);
     }
 
-    private void drawThreeWtEdge(Graph graph, XMLStreamWriter writer, ThreeWtEdge edge) throws XMLStreamException {
+    private void drawThreeWtEdge(XMLStreamWriter writer, ThreeWtEdge edge) throws XMLStreamException {
         if (!edge.isVisible()) {
             return;
         }
         writer.writeStartElement(GROUP_ELEMENT_NAME);
         writeId(writer, edge);
-        writeStyleClasses(writer, styleProvider.getEdgeStyleClasses(edge));
+        writeStyleClasses(writer, styleProvider.getThreeWtEdgeStyleClasses(edge));
         insertName(writer, edge::getName);
-
         writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
-        writeStyleClasses(writer, StyleProvider.EDGE_PATH_CLASS, StyleProvider.STRETCHABLE_CLASS);
+        writeStyleClasses(writer, StyleProvider.EDGE_PATH_CLASS);
+        writeStyleAttribute(writer, styleProvider.getThreeWtEdgeStyle(edge));
         writer.writeAttribute(POINTS_ATTRIBUTE, getPolylinePointsString(edge));
+        writer.writeEndElement();
+    }
 
-        Optional<EdgeInfo> edgeInfo = labelProvider.getEdgeInfo(graph, edge);
-        if (edgeInfo.isPresent()) {
-            drawThreeWtEdgeInfo(graph, writer, edge, edgeInfo.get());
+    private void drawHighlightThreeWtEdge(XMLStreamWriter writer, ThreeWtEdge edge) throws XMLStreamException {
+        if (!edge.isVisible()) {
+            return;
         }
-
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writeStyleClasses(writer, styleProvider.getThreeWtEdgeStyleClasses(edge));
+        writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
+        writeStyleClasses(writer, styleProvider.getHighlightThreeWtEdgStyleClasses(edge));
+        writer.writeAttribute(POINTS_ATTRIBUTE, getPolylinePointsString(edge));
         writer.writeEndElement();
     }
 
     private void drawThreeWtNodes(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
-        List<ThreeWtNode> threeWtNodes = graph.getThreeWtNodesStream().collect(Collectors.toList());
+        List<ThreeWtNode> threeWtNodes = graph.getThreeWtNodesStream().toList();
         if (threeWtNodes.isEmpty()) {
             return;
         }
@@ -328,9 +475,12 @@ public class SvgWriter {
             writeId(writer, threeWtNode);
             writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(threeWtNode.getPosition()));
             writeStyleClasses(writer, styleProvider.getNodeStyleClasses(threeWtNode));
-            List<ThreeWtEdge> edges = graph.getThreeWtEdgeStream(threeWtNode).collect(Collectors.toList());
+            List<ThreeWtEdge> edges = graph.getThreeWtEdgeStream(threeWtNode).toList();
             for (ThreeWtEdge edge : edges) {
                 draw3WtWinding(edge, threeWtNode, writer);
+                if (ThreeWtEdge.PST_EDGE.equals(edge.getType())) {
+                    drawPstArrow(writer, threeWtNode, edge);
+                }
             }
             writer.writeEndElement();
         }
@@ -341,112 +491,290 @@ public class SvgWriter {
         double radius = svgParameters.getTransformerCircleRadius();
         Point circleCenter = edge.getPoints().get(1).atDistance(radius, threeWtNode.getPosition());
         writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
-        writeStyleClasses(writer, styleProvider.getThreeWtNodeStyle(threeWtNode, edge.getSide()), StyleProvider.WINDING_CLASS);
-        writer.writeAttribute("cx", getFormattedValue(circleCenter.getX() - threeWtNode.getX()));
-        writer.writeAttribute("cy", getFormattedValue(circleCenter.getY() - threeWtNode.getY()));
+        writeStyleClasses(writer, styleProvider.getThreeWtEdgeStyleClasses(edge), StyleProvider.WINDING_CLASS);
+        writeStyleAttribute(writer, styleProvider.getThreeWtEdgeStyle(edge));
+        writer.writeAttribute("cx", getFormattedValue(circleCenter.x() - threeWtNode.getX()));
+        writer.writeAttribute("cy", getFormattedValue(circleCenter.y() - threeWtNode.getY()));
         writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(svgParameters.getTransformerCircleRadius()));
     }
 
-    private void drawLoopEdgeInfo(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side, EdgeInfo edgeInfo) throws XMLStreamException {
-        drawEdgeInfo(writer, edgeInfo, edge.getPoints(side).get(1), edge.getEdgeStartAngle(side));
+    private void drawPstArrow(XMLStreamWriter writer, ThreeWtNode threeWtNode, ThreeWtEdge edge) throws XMLStreamException {
+        double arrowSize = 3 * svgParameters.getTransformerCircleRadius();
+
+        double delta = switch (edge.getSide()) {
+            case ONE -> 1.5 * Math.PI;
+            case TWO -> 0.75 * Math.PI;
+            case THREE -> Math.PI;
+        };
+
+        double rotationAngle = edge.getEdgeAngle() + delta;
+
+        double radius = svgParameters.getTransformerCircleRadius();
+        Point circleCenter = edge.getPoints().get(1).atDistance(radius, threeWtNode.getPosition());
+        Point p = new Point(circleCenter.x() - threeWtNode.getX(), circleCenter.y() - threeWtNode.getY());
+        double[] matrix = getTransformMatrix(arrowSize, arrowSize, rotationAngle, p);
+
+        writer.writeEmptyElement(PATH_ELEMENT_NAME);
+        writer.writeAttribute(PATH_D_ATTRIBUTE, getPstArrowPath(arrowSize));
+        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getMatrixString(matrix));
+        writeStyleClasses(writer, styleProvider.getThreeWtEdgeStyleClasses(edge), StyleProvider.WINDING_CLASS);
+        writeStyleAttribute(writer, styleProvider.getThreeWtEdgeStyle(edge));
     }
 
-    private void drawBranchEdgeInfo(Graph graph, XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side, EdgeInfo edgeInfo) throws XMLStreamException {
-        VoltageLevelNode vlNode = graph.getVoltageLevelNode(edge, side);
-        BusNode busNode = graph.getBusGraphNode(edge, side);
-        List<String> additionalStyles = List.of(StyleProvider.GLUED_CLASS + "-" + side.getNum());
-        drawEdgeInfo(writer, additionalStyles, edgeInfo, getArrowCenter(vlNode, busNode, edge.getPoints(side)), edge.getEdgeEndAngle(side));
+    private void drawEdgeInfos(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.EDGE_INFOS_CLASS);
+
+        for (BranchEdge edge : graph.getBranchEdges()) {
+            if (graph.isNotALoop(edge)) {
+                drawBranchEdgeInfo(writer, edge, BranchEdge.Side.ONE);
+                drawBranchEdgeInfo(writer, edge, BranchEdge.Side.TWO);
+            } else {
+                drawLoopEdgeInfo(writer, edge, BranchEdge.Side.ONE);
+                drawLoopEdgeInfo(writer, edge, BranchEdge.Side.TWO);
+            }
+            drawBranchMiddleInfo(writer, edge);
+        }
+
+        for (ThreeWtEdge edge : graph.getThreeWtEdges()) {
+            drawThreeWtEdgeInfo(writer, edge);
+        }
+
+        for (Injection injection : graph.getInjections()) {
+            drawInjectionEdgeInfo(writer, injection);
+        }
+
+        writer.writeEndElement();
     }
 
-    private void drawThreeWtEdgeInfo(Graph graph, XMLStreamWriter writer, ThreeWtEdge edge, EdgeInfo edgeInfo) throws XMLStreamException {
-        VoltageLevelNode vlNode = graph.getVoltageLevelNode(edge);
-        BusNode busNode = graph.getBusGraphNode(edge);
-        List<String> additionalStyles = List.of(StyleProvider.GLUED_CLASS + "-1");
-        drawEdgeInfo(writer, additionalStyles, edgeInfo, getArrowCenter(vlNode, busNode, edge.getPoints()), edge.getEdgeAngle());
+    private void drawLoopEdgeInfo(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
+        if (edge.isVisible(side)) {
+            Optional<SvgEdgeInfo> svgEdgeInfo = edge.getSvgEdgeInfo(side);
+            if (svgEdgeInfo.isPresent()) {
+                drawEdgeInfoOrLabel(writer, svgEdgeInfo.get(), edge.getPoints(side).get(1),
+                    edge.getEdgeStartAngle(side), edge, this::drawEdgeInfoAsLabel);
+            }
+        }
     }
 
-    private void drawEdgeInfo(XMLStreamWriter writer, EdgeInfo edgeInfo, Point infoCenter, double edgeAngle) throws XMLStreamException {
-        drawEdgeInfo(writer, Collections.emptyList(), edgeInfo, infoCenter, edgeAngle);
+    private void drawBranchEdgeInfo(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
+        if (edge.isVisible(side)) {
+            Optional<SvgEdgeInfo> svgEdgeInfo = edge.getSvgEdgeInfo(side);
+            if (svgEdgeInfo.isPresent()) {
+                drawEdgeInfoOrLabel(writer, svgEdgeInfo.get(), edge.getArrow(side),
+                    edge.getArrowAngle(side), edge, this::drawEdgeInfoAsLabel);
+            }
+        }
     }
 
-    private void drawEdgeInfo(XMLStreamWriter writer, List<String> additionalStyles, EdgeInfo edgeInfo, Point infoCenter, double edgeAngle) throws XMLStreamException {
+    private void drawBranchMiddleInfo(XMLStreamWriter writer, BranchEdge edge) throws XMLStreamException {
+        Optional<SvgEdgeInfo> svgEdgeInfo = edge.getSvgEdgeInfoMiddle();
+        if (svgEdgeInfo.isEmpty() || svgEdgeInfo.get().edgeInfo() == null || checkIfEdgeInfoIsEmpty(svgEdgeInfo.get().edgeInfo())) {
+            return;
+        }
+        drawEdgeInfoOrLabel(writer, svgEdgeInfo.get(), edge.getMiddlePoint(),
+            edge.getEdgeEndAngle(BranchEdge.Side.ONE), edge, this::drawEdgeInfoAsLabel);
+    }
+
+    private void drawThreeWtEdgeInfo(XMLStreamWriter writer, ThreeWtEdge edge) throws XMLStreamException {
+        if (edge.isVisible()) {
+            Optional<SvgEdgeInfo> svgEdgeInfo = edge.getSvgEdgeInfo();
+            if (svgEdgeInfo.isPresent()) {
+                drawEdgeInfoOrLabel(writer, svgEdgeInfo.get(), edge.getArrowPoint(),
+                    edge.getEdgeAngle(), edge, this::drawEdgeInfoAsLabel);
+            }
+        }
+    }
+
+    private void drawInjectionEdgeInfo(XMLStreamWriter writer, Injection injection) throws XMLStreamException {
+        Optional<SvgEdgeInfo> svgEdgeInfo = injection.getSvgEdgeInfo();
+        if (svgEdgeInfo.isPresent()) {
+            drawEdgeInfoOrLabel(writer, svgEdgeInfo.get(), injection.getArrowPoint(),
+                injection.getAngle(), injection, this::drawEdgeInfoAsLabel);
+        }
+    }
+
+    @FunctionalInterface
+    private interface EdgeLabelDrawer<E> {
+        void draw(XMLStreamWriter writer, SvgEdgeInfo svgEdgeInfo, Point infoCenter, E edge, String edgeLabel, List<String> classes)
+            throws XMLStreamException;
+    }
+
+    private <E> void drawEdgeInfoOrLabel(XMLStreamWriter writer,
+                                         SvgEdgeInfo svgEdgeInfo,
+                                         Point point,
+                                         double edgeAngle,
+                                         E edge,
+                                         EdgeLabelDrawer<E> labelDrawer) throws XMLStreamException {
+        EdgeInfo edgeInfo = svgEdgeInfo.edgeInfo();
+        if (checkIfEdgeInfoIsEmpty(edgeInfo)) {
+            return;
+        }
+        if (edgeInfo.getDirection().isPresent() || edgeInfo.getComponentType().isPresent() || edgeInfo.getLabelB().isPresent() && edgeInfo.getLabelA().isPresent()) {
+            drawEdgeInfo(writer, svgEdgeInfo, point, edgeAngle);
+        } else {
+            String label = edgeInfo.getLabelB().orElse(edgeInfo.getLabelA().orElse(null));
+            labelDrawer.draw(writer, svgEdgeInfo, point, edge, label, styleProvider.getEdgeInfoStyleClasses(edgeInfo.getMainInfoType()));
+        }
+    }
+
+    private void drawEdgeInfoAsLabel(XMLStreamWriter writer, SvgEdgeInfo svgEdgeInfo, Point infoCenter, BranchEdge edge,
+                                     String label, List<String> classes) throws XMLStreamException {
+        if (label == null || label.isEmpty()) {
+            return;
+        }
 
         writer.writeStartElement(GROUP_ELEMENT_NAME);
-        writeStyleClasses(writer, additionalStyles, StyleProvider.EDGE_INFOS_CLASS);
+        writer.writeAttribute(ID_ATTRIBUTE, svgEdgeInfo.svgId());
         writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(infoCenter));
 
-        writer.writeStartElement(GROUP_ELEMENT_NAME);
-        writeStyleClasses(writer, styleProvider.getEdgeInfoStyles(edgeInfo));
-        drawInAndOutArrows(writer, edgeAngle);
-        Optional<String> externalLabel = edgeInfo.getExternalLabel();
-        if (externalLabel.isPresent()) {
-            drawLabel(writer, externalLabel.get(), edgeAngle, true);
-        }
-        Optional<String> internalLabel = edgeInfo.getInternalLabel();
-        if (internalLabel.isPresent()) {
-            drawLabel(writer, internalLabel.get(), edgeAngle, false);
-        }
-        writer.writeEndElement();
-
-        writer.writeEndElement();
-    }
-
-    private void drawInAndOutArrows(XMLStreamWriter writer, double edgeAngle) throws XMLStreamException {
-        double rotationAngle = edgeAngle + (edgeAngle > Math.PI / 2 ? -3 * Math.PI / 2 : Math.PI / 2);
-        writer.writeStartElement(GROUP_ELEMENT_NAME);
-        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getRotateString(rotationAngle));
-        writer.writeEmptyElement(PATH_ELEMENT_NAME);
-        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.ARROW_IN_CLASS);
-        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getScaleString(svgParameters.getArrowHeight()));
-        writer.writeAttribute(PATH_D_ATTRIBUTE, labelProvider.getArrowPathDIn());
-        writer.writeEmptyElement(PATH_ELEMENT_NAME);
-        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.ARROW_OUT_CLASS);
-        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getScaleString(svgParameters.getArrowHeight()));
-        writer.writeAttribute(PATH_D_ATTRIBUTE, labelProvider.getArrowPathDOut());
-        writer.writeEndElement();
-    }
-
-    private void drawLabel(XMLStreamWriter writer, String label, double edgeAngle, boolean externalLabel) throws XMLStreamException {
-        if (svgParameters.isEdgeInfoAlongEdge()) {
-            drawLabelAlongEdge(writer, label, edgeAngle, externalLabel);
+        if (edge.isVisible(BranchEdge.Side.ONE) && edge.isVisible(BranchEdge.Side.TWO)) {
+            double edgeEndAngle = edge.getEdgeEndAngle(BranchEdge.Side.ONE);
+            drawEdgeMiddleLabel(label, edgeEndAngle, writer, classes);
+        } else if (edge.isVisible(BranchEdge.Side.ONE)) {
+            drawHalfEdgeLabel(label, edge, BranchEdge.Side.ONE, writer, classes);
         } else {
-            drawLabelPerpendicularToEdge(writer, label, edgeAngle, externalLabel);
+            drawHalfEdgeLabel(label, edge, BranchEdge.Side.TWO, writer, classes);
+        }
+
+        writer.writeEndElement();
+    }
+
+    private void drawEdgeInfoAsLabel(XMLStreamWriter writer, SvgEdgeInfo svgEdgeInfo, Point infoCenter,
+                                     ThreeWtEdge threeWtEdge, String edgeLabel, List<String> classes) throws XMLStreamException {
+        if (edgeLabel == null || edgeLabel.isEmpty()) {
+            return;
+        }
+
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(ID_ATTRIBUTE, svgEdgeInfo.svgId());
+        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(infoCenter));
+
+        drawEdgeMiddleLabel(edgeLabel, threeWtEdge.getEdgeAngle(), writer, classes);
+
+        writer.writeEndElement();
+    }
+
+    private void drawEdgeInfoAsLabel(XMLStreamWriter writer, SvgEdgeInfo svgEdgeInfo, Point infoCenter,
+                                     Injection injection, String edgeLabel, List<String> classes) throws XMLStreamException {
+        if (edgeLabel == null || edgeLabel.isEmpty()) {
+            return;
+        }
+
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(ID_ATTRIBUTE, svgEdgeInfo.svgId());
+        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(infoCenter));
+
+        drawEdgeMiddleLabel(edgeLabel, injection.getAngle(), writer, classes);
+
+        writer.writeEndElement();
+    }
+
+    private void drawEdgeInfo(XMLStreamWriter writer, SvgEdgeInfo svgEdgeInfo, Point infoCenter, double edgeAngle) throws XMLStreamException {
+        EdgeInfo edgeInfo = svgEdgeInfo.edgeInfo();
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(ID_ATTRIBUTE, svgEdgeInfo.svgId());
+        writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(infoCenter));
+
+        Optional<String> componentType = edgeInfo.getComponentType();
+        if (componentType.isPresent()) {
+            this.drawComponentOnBranchEdgeMiddle(writer, componentType.get());
+        } else {
+            drawArrows(writer, edgeInfo, edgeAngle);
+        }
+
+        double factor = edgeInfo.getDirectionA().isEmpty() || edgeInfo.getDirectionB().isEmpty() ? 1.0 : svgParameters.getDoubleArrowShiftFactorText();
+        Optional<String> labelB = edgeInfo.getLabelB();
+        if (labelB.isPresent()) {
+            drawLabel(writer, labelB.get(), edgeAngle, true, styleProvider.getEdgeInfoStyleClasses(edgeInfo.getInfoTypeB()), factor);
+        }
+        Optional<String> labelA = edgeInfo.getLabelA();
+        if (labelA.isPresent()) {
+            drawLabel(writer, labelA.get(), edgeAngle, false, styleProvider.getEdgeInfoStyleClasses(edgeInfo.getInfoTypeA()), factor);
+        }
+
+        writer.writeEndElement();
+    }
+
+    private boolean checkIfEdgeInfoIsEmpty(EdgeInfo edgeInfo) {
+        return edgeInfo.getLabelB().isEmpty() && edgeInfo.getLabelA().isEmpty() && edgeInfo.getDirection().isEmpty();
+    }
+
+    private void drawArrows(XMLStreamWriter writer, EdgeInfo edgeInfo, double edgeAngle) throws XMLStreamException {
+        Optional<EdgeInfo.Direction> direction = edgeInfo.getDirection();
+        if (direction.isPresent()) {
+            Optional<EdgeInfo.Direction> directionA = edgeInfo.getDirectionA();
+            Optional<EdgeInfo.Direction> directionB = edgeInfo.getDirectionB();
+
+            if (directionA.isEmpty() || directionB.isEmpty()) {
+                drawArrow(writer, edgeAngle, direction.get(), null, styleProvider.getEdgeInfoStyleClasses(edgeInfo.getMainInfoType()));
+            } else {
+                drawArrow(writer, edgeAngle, directionB.get(), true, styleProvider.getEdgeInfoStyleClasses(edgeInfo.getInfoTypeB()));
+                drawArrow(writer, edgeAngle, directionA.get(), false, styleProvider.getEdgeInfoStyleClasses(edgeInfo.getInfoTypeA()));
+            }
         }
     }
 
-    private void drawLabelAlongEdge(XMLStreamWriter writer, String label, double edgeAngle, boolean externalLabel) throws XMLStreamException {
+    private void drawArrow(XMLStreamWriter writer, double edgeAngle, EdgeInfo.Direction direction, Boolean externalLabel, List<String> classes) throws XMLStreamException {
+        double rotationAngle = edgeAngle + (edgeAngle > Math.PI / 2 ? -3 * Math.PI / 2 : Math.PI / 2);
+        writer.writeEmptyElement(PATH_ELEMENT_NAME);
+
+        // Build transform string with both rotation and translation if needed
+        String transformValue;
+        if (externalLabel != null) {
+            // Invert the sign because after rotation, the coordinate systems are inverted
+            double shift = svgParameters.getArrowLabelShift() / svgParameters.getDoubleArrowShiftFactorArrows() * (externalLabel ? -1 : 1);
+            transformValue = getRotateString(rotationAngle) + " " + getTranslateString(0, shift);
+        } else {
+            transformValue = getRotateString(rotationAngle);
+        }
+        writer.writeAttribute(TRANSFORM_ATTRIBUTE, transformValue);
+
+        if (direction == EdgeInfo.Direction.IN) {
+            writeStyleClasses(writer, classes, StyleProvider.ARROW_IN_CLASS);
+            writer.writeAttribute(PATH_D_ATTRIBUTE, svgParameters.getArrowPathIn());
+        } else if (direction == EdgeInfo.Direction.OUT) {
+            writeStyleClasses(writer, classes, StyleProvider.ARROW_OUT_CLASS);
+            writer.writeAttribute(PATH_D_ATTRIBUTE, svgParameters.getArrowPathOut());
+        }
+    }
+
+    private void drawLabel(XMLStreamWriter writer, String label, double edgeAngle, boolean externalLabel, List<String> classes, double factor) throws XMLStreamException {
+        if (svgParameters.isEdgeInfoAlongEdge()) {
+            drawLabelAlongEdge(writer, label, edgeAngle, externalLabel, classes, factor);
+        } else {
+            drawLabelPerpendicularToEdge(writer, label, edgeAngle, externalLabel, classes, factor);
+        }
+    }
+
+    private void drawLabelAlongEdge(XMLStreamWriter writer, String label, double edgeAngle, boolean externalLabel, List<String> classes, double factor) throws XMLStreamException {
         boolean textFlipped = Math.cos(edgeAngle) < 0;
         String style = externalLabel == textFlipped ? "text-anchor:end" : null;
         double textAngle = textFlipped ? edgeAngle - Math.PI : edgeAngle;
-        double shift = svgParameters.getArrowLabelShift() * (externalLabel ? 1 : -1);
-        drawLabel(writer, label, textFlipped ? -shift : shift, style, textAngle, X_ATTRIBUTE);
+        double shift = svgParameters.getArrowLabelShift() * factor * (externalLabel ? 1 : -1);
+        drawLabel(writer, label, textFlipped ? -shift : shift, style, textAngle, X_ATTRIBUTE, classes);
     }
 
-    private void drawLabelPerpendicularToEdge(XMLStreamWriter writer, String label, double edgeAngle, boolean externalLabel) throws XMLStreamException {
+    private void drawLabelPerpendicularToEdge(XMLStreamWriter writer, String label, double edgeAngle, boolean externalLabel, List<String> classes, double factor) throws XMLStreamException {
         boolean textFlipped = Math.sin(edgeAngle) > 0;
         double textAngle = textFlipped ? -Math.PI / 2 + edgeAngle : Math.PI / 2 + edgeAngle;
-        double shift = svgParameters.getArrowLabelShift();
+        double shift = svgParameters.getArrowLabelShift() * factor;
         double shiftAdjusted = externalLabel == textFlipped ? shift * 1.15 : -shift; // to have a nice compact rendering, shift needs to be adjusted, because of dominant-baseline:middle (text is expected to be a number, hence not below the line)
-        drawLabel(writer, label, shiftAdjusted, "text-anchor:middle", textAngle, Y_ATTRIBUTE);
+        drawLabel(writer, label, shiftAdjusted, TEXT_ANCHOR_MIDDLE, textAngle, Y_ATTRIBUTE, classes);
     }
 
-    private void drawLabel(XMLStreamWriter writer, String label, double shift, String style, double textAngle, String shiftAxis) throws XMLStreamException {
+    private void drawLabel(XMLStreamWriter writer, String textToDisplay, double shift, String style, double textAngle, String shiftAxis, List<String> classes) throws XMLStreamException {
         writer.writeStartElement(TEXT_ELEMENT_NAME);
         writer.writeAttribute(TRANSFORM_ATTRIBUTE, getRotateString(textAngle));
+        writeStyleClasses(writer, classes);
         writer.writeAttribute(shiftAxis, getFormattedValue(shift));
-        if (style != null) {
-            writer.writeAttribute(STYLE_ELEMENT_NAME, style);
-        }
-        writer.writeCharacters(label);
+        writeStyleAttribute(writer, style);
+        writer.writeCharacters(textToDisplay);
         writer.writeEndElement();
     }
 
     private String getRotateString(double angleRad) {
         return "rotate(" + getFormattedValue(Math.toDegrees(angleRad)) + ")";
-    }
-
-    private String getScaleString(double scale) {
-        return "scale(" + getFormattedValue(scale) + ")";
     }
 
     private String getMatrixString(double[] matrix) {
@@ -457,8 +785,8 @@ public class SvgWriter {
     }
 
     private double[] getTransformMatrix(double width, double height, double angle, Point center) {
-        double centerPosX = center.getX();
-        double centerPosY = center.getY();
+        double centerPosX = center.x();
+        double centerPosY = center.y();
 
         double cosRo = Math.cos(angle);
         double sinRo = Math.sin(angle);
@@ -471,26 +799,17 @@ public class SvgWriter {
         return new double[]{+cosRo, sinRo, -sinRo, cosRo, e1, f1};
     }
 
-    private Point getArrowCenter(VoltageLevelNode vlNode, BusNode busNode, List<Point> line) {
-        double shift = svgParameters.getArrowShift();
-        if (line.size() == 2) { // straight line; in case of a forking line it is the middle point which is the starting point
-            double nodeOuterRadius = getVoltageLevelCircleRadius(vlNode);
-            double busAnnulusOuterRadius = getBusAnnulusOuterRadius(busNode, vlNode, svgParameters);
-            shift += nodeOuterRadius - busAnnulusOuterRadius;
-        }
-        return line.get(line.size() - 2).atDistance(shift, line.get(line.size() - 1));
-    }
-
     private void draw2WtWinding(XMLStreamWriter writer, BranchEdge edge, BranchEdge.Side side) throws XMLStreamException {
         writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
         writeStyleClasses(writer, styleProvider.getSideEdgeStyleClasses(edge, side), StyleProvider.WINDING_CLASS);
+        writeStyleAttribute(writer, styleProvider.getSideEdgeStyle(edge, side));
         List<Point> halfPoints = edge.getPoints(side);
-        Point point1 = halfPoints.get(halfPoints.size() - 1); // point near 2wt
+        Point point1 = halfPoints.getLast(); // point near 2wt
         Point point2 = halfPoints.get(halfPoints.size() - 2); // point near voltage level, or control point for loops
         double radius = svgParameters.getTransformerCircleRadius();
         Point circleCenter = point1.atDistance(-radius, point2);
-        writer.writeAttribute("cx", getFormattedValue(circleCenter.getX()));
-        writer.writeAttribute("cy", getFormattedValue(circleCenter.getY()));
+        writer.writeAttribute("cx", getFormattedValue(circleCenter.x()));
+        writer.writeAttribute("cy", getFormattedValue(circleCenter.y()));
         writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(radius));
     }
 
@@ -500,7 +819,7 @@ public class SvgWriter {
 
         List<Point> points1 = edge.getPoints1();
         List<Point> points2 = edge.getPoints2();
-        Point middle = Point.createMiddlePoint(points1.get(points1.size() - 1), points2.get(points2.size() - 1));
+        Point middle = Point.createMiddlePoint(points1.getLast(), points2.getLast());
         double[] matrix = getTransformMatrix(arrowSize, arrowSize, rotationAngle, middle);
 
         writer.writeEmptyElement(PATH_ELEMENT_NAME);
@@ -519,7 +838,7 @@ public class SvgWriter {
     private void drawVoltageLevelNodes(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
         writer.writeStartElement(GROUP_ELEMENT_NAME);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.VOLTAGE_LEVEL_NODES_CLASS);
-        for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).collect(Collectors.toList())) {
+        for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).toList()) {
             writer.writeStartElement(GROUP_ELEMENT_NAME);
             writer.writeAttribute(TRANSFORM_ATTRIBUTE, getTranslateString(vlNode));
             drawNode(graph, writer, vlNode);
@@ -528,11 +847,27 @@ public class SvgWriter {
         writer.writeEndElement();
     }
 
+    private void drawHighlightVoltageLevelNodes(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
+        writer.writeStartElement(GROUP_ELEMENT_NAME);
+        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.VOLTAGE_LEVEL_NODES_CLASS);
+        for (VoltageLevelNode vlNode : graph.getVoltageLevelNodesStream().filter(VoltageLevelNode::isVisible).toList()) {
+            drawHighlightedNode(writer, vlNode);
+        }
+        writer.writeEndElement();
+    }
+
+    private void drawHighlightedNode(XMLStreamWriter writer, VoltageLevelNode vlNode) throws XMLStreamException {
+        writer.writeStartElement(USE_ELEMENT_NAME);
+        writer.writeAttribute(HREF_ATTRIBUTE, "#" + getPrefixedId(vlNode.getSvgId()));
+        writeStyleClasses(writer, styleProvider.getHighlightNodeStyleClasses(vlNode));
+        writer.writeEndElement();
+    }
+
     private void drawTextNodes(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
         writer.writeStartElement(GROUP_ELEMENT_NAME);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.TEXT_NODES_CLASS);
         for (Pair<VoltageLevelNode, TextNode> nodePair : graph.getVoltageLevelTextPairs()) {
-            writeTextNode(writer, nodePair.getSecond(), nodePair.getFirst(), labelProvider);
+            writeTextNode(writer, nodePair.getFirst(), nodePair.getSecond());
         }
         writer.writeEndElement();
     }
@@ -542,52 +877,37 @@ public class SvgWriter {
     }
 
     private String getTranslateString(Point point) {
-        return getTranslateString(point.getX(), point.getY());
+        return getTranslateString(point.x(), point.y());
     }
 
     private String getTranslateString(double x, double y) {
         return "translate(" + getFormattedValue(x) + "," + getFormattedValue(y) + ")";
     }
 
-    private void writeTextNode(XMLStreamWriter writer, TextNode textNode, VoltageLevelNode vlNode, LabelProvider labelProvider) throws XMLStreamException {
-        if (textNode == null) {
-            return;
-        }
-
-        List<String> content = labelProvider.getVoltageLevelDescription(vlNode);
-        if (content.size() > 1 || svgParameters.isBusLegend() || svgParameters.isVoltageLevelDetails()) {
-            writeDetailedTextNode(writer, textNode, vlNode, content);
-        } else {
-            writeSimpleTextNode(writer, textNode, content);
-        }
-    }
-
-    private void writeDetailedTextNode(XMLStreamWriter writer, TextNode textNode, VoltageLevelNode vlNode, List<String> content) throws XMLStreamException {
+    private void writeTextNode(XMLStreamWriter writer, VoltageLevelNode vlNode, TextNode textNode) throws XMLStreamException {
         writer.writeStartElement(FOREIGN_OBJECT_ELEMENT_NAME);
         writeId(writer, textNode);
-        writer.writeAttribute(Y_ATTRIBUTE, getFormattedValue(textNode.getY() - svgParameters.getDetailedTextNodeYShift()));
+        writer.writeAttribute(Y_ATTRIBUTE, getFormattedValue(textNode.getY()));
         writer.writeAttribute(X_ATTRIBUTE, getFormattedValue(textNode.getX()));
 
-        // width and height cannot be set to auto, and object is of width and height 0 if not specified
+        // width and height cannot be set to auto, and the object is of width and height 0 if not specified
         // using a fixed size of 1x1 and CSS {overflow: visible} to display it
         writer.writeAttribute(HEIGHT_ATTRIBUTE, "1");
         writer.writeAttribute(WIDTH_ATTRIBUTE, "1");
 
+        writeDetailedTextNode(writer, vlNode);
+        writer.writeEndElement();
+    }
+
+    private void writeDetailedTextNode(XMLStreamWriter writer, VoltageLevelNode vlNode) throws XMLStreamException {
         writer.writeStartElement("", DIV_ELEMENT_NAME, XHTML_NAMESPACE_URI);
         writer.writeDefaultNamespace(XHTML_NAMESPACE_URI);
-        writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.LABEL_BOX_CLASS);
+        writeStyleClasses(writer, styleProvider.getNodeStyleClasses(vlNode), StyleProvider.LABEL_BOX_CLASS);
 
-        writeLines(content, writer);
+        writeLines(vlNode.getLegendHeader(), writer);
+        writeBusNodeLegend(writer, vlNode);
+        writeLines(vlNode.getLegendFooter(), writer);
 
-        if (svgParameters.isBusLegend()) {
-            writeBusNodeLegend(writer, vlNode);
-        }
-
-        if (svgParameters.isVoltageLevelDetails()) {
-            writeLines(labelProvider.getVoltageLevelDetails(vlNode), writer);
-        }
-
-        writer.writeEndElement();
         writer.writeEndElement();
     }
 
@@ -600,42 +920,21 @@ public class SvgWriter {
     }
 
     private void writeBusNodeLegend(XMLStreamWriter writer, VoltageLevelNode vlNode) throws XMLStreamException {
-        writer.writeStartElement(TABLE_ELEMENT_NAME);
-
         for (BusNode busNode : vlNode.getBusNodes()) {
-            writer.writeStartElement(TABLE_ROW_ELEMENT_NAME);
-            writer.writeStartElement(TABLE_DATA_ELEMENT_NAME);
-            writer.writeEmptyElement(DIV_ELEMENT_NAME);
-            writeStyleClasses(writer, styleProvider.getNodeStyleClasses(busNode), StyleProvider.LEGEND_SQUARE_CLASS);
-            writer.writeEndElement();
-            writer.writeStartElement(TABLE_DATA_ELEMENT_NAME);
-            writer.writeCharacters(labelProvider.getBusDescription(busNode));
-            writer.writeEndElement();
-            writer.writeEndElement();
-        }
-        writer.writeEndElement();
-    }
-
-    private void writeSimpleTextNode(XMLStreamWriter writer, TextNode textNode, List<String> content) throws XMLStreamException {
-        writer.writeStartElement(TEXT_ELEMENT_NAME);
-        writeId(writer, textNode);
-        writer.writeAttribute(Y_ATTRIBUTE, getFormattedValue(textNode.getY()));
-        if (content.size() == 1) {
-            writer.writeAttribute(X_ATTRIBUTE, getFormattedValue(textNode.getX()));
-            writer.writeCharacters(content.get(0));
-        } else {
-            for (int i = 0; i < content.size(); i++) {
-                String line = content.get(i);
-                writer.writeStartElement(TSPAN_ELEMENT_NAME);
-                writer.writeAttribute(X_ATTRIBUTE, getFormattedValue(textNode.getX()));
-                if (i > 0) {
-                    writer.writeAttribute(DY_ATTRIBUTE, "1.1em");
-                }
-                writer.writeCharacters(line);
-                writer.writeEndElement();
+            if (StringUtils.isEmpty(busNode.getLegend())) {
+                continue;
             }
+            writer.writeStartElement(DIV_ELEMENT_NAME);
+            writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.BUS_DESCR_CLASS);
+
+            writer.writeStartElement(SPAN_ELEMENT_NAME);
+            writeStyleClasses(writer, styleProvider.getBusNodeStyleClasses(busNode), StyleProvider.LEGEND_SQUARE_CLASS);
+            writeStyleAttribute(writer, styleProvider.getBusNodeStyle(busNode));
+            writer.writeEndElement();
+
+            writer.writeCharacters(busNode.getLegend());
+            writer.writeEndElement();
         }
-        writer.writeEndElement();
     }
 
     private void drawNode(Graph graph, XMLStreamWriter writer, VoltageLevelNode vlNode) throws XMLStreamException {
@@ -643,22 +942,24 @@ public class SvgWriter {
         writeStyleClasses(writer, styleProvider.getNodeStyleClasses(vlNode));
         insertName(writer, vlNode::getName);
 
-        double nodeOuterRadius = getVoltageLevelCircleRadius(vlNode);
+        double nodeOuterRadius = RadiusUtils.getVoltageLevelCircleRadius(vlNode, svgParameters);
 
         if (vlNode.hasUnknownBusNode()) {
             writer.writeEmptyElement(CIRCLE_ELEMENT_NAME);
-            writeStyleClasses(writer, styleProvider.getNodeStyleClasses(BusNode.UNKNOWN));
+            writeStyleClasses(writer, styleProvider.getBusNodeStyleClasses(BusNode.UNKNOWN));
+            writeStyleAttribute(writer, styleProvider.getBusNodeStyle(BusNode.UNKNOWN));
             writer.writeAttribute(CIRCLE_RADIUS_ATTRIBUTE, getFormattedValue(nodeOuterRadius + svgParameters.getUnknownBusNodeExtraRadius()));
         }
 
-        List<Edge> traversingBusEdges = new ArrayList<>();
+        List<Edge> traversingEdges = new ArrayList<>();
+        List<Injection> traversingInjections = new ArrayList<>();
 
         for (BusNode busNode : vlNode.getBusNodes()) {
-            double busInnerRadius = getBusAnnulusInnerRadius(busNode, vlNode, svgParameters);
-            double busOuterRadius = getBusAnnulusOuterRadius(busNode, vlNode, svgParameters);
+            double busInnerRadius = RadiusUtils.getBusAnnulusInnerRadius(busNode, vlNode, svgParameters);
+            double busOuterRadius = RadiusUtils.getBusAnnulusOuterRadius(busNode, vlNode, svgParameters);
             if (busInnerRadius == 0) {
                 if (busNode instanceof BoundaryBusNode) {
-                    // Boundary nodes are always at side two of a dangling line edge, dangling line is its only edge
+                    // Boundary nodes are always at side two of a boundary line edge, boundary line is its only edge
                     double edgeStartAngle = getEdgeStartAngle(graph.getBusEdges(busNode).iterator().next(), BranchEdge.Side.TWO);
                     drawBoundarySemicircle(writer, busOuterRadius, edgeStartAngle);
                 } else {
@@ -667,12 +968,15 @@ public class SvgWriter {
                 }
             } else {
                 writer.writeEmptyElement(PATH_ELEMENT_NAME);
-                writer.writeAttribute(PATH_D_ATTRIBUTE, getFragmentedAnnulusPath(busInnerRadius, busOuterRadius, traversingBusEdges, graph, vlNode, busNode));
+                String path = getFragmentedAnnulusPath(busInnerRadius, busOuterRadius, traversingEdges, traversingInjections, graph, vlNode, busNode);
+                writer.writeAttribute(PATH_D_ATTRIBUTE, path);
             }
             writeId(writer, busNode);
-            writeStyleClasses(writer, styleProvider.getNodeStyleClasses(busNode), StyleProvider.BUSNODE_CLASS);
+            writeStyleClasses(writer, styleProvider.getBusNodeStyleClasses(busNode), StyleProvider.BUSNODE_CLASS);
+            writeStyleAttribute(writer, styleProvider.getBusNodeStyle(busNode));
 
-            traversingBusEdges.addAll(graph.getBusEdges(busNode));
+            traversingEdges.addAll(graph.getBusEdges(busNode));
+            traversingInjections.addAll(busNode.getInjections());
         }
     }
 
@@ -683,8 +987,9 @@ public class SvgWriter {
         writer.writeAttribute(PATH_D_ATTRIBUTE, semiCircle);
     }
 
-    private String getFragmentedAnnulusPath(double innerRadius, double outerRadius, List<Edge> traversingBusEdges, Graph graph, VoltageLevelNode vlNode, BusNode busNode) {
-        if (traversingBusEdges.isEmpty()) {
+    private String getFragmentedAnnulusPath(double innerRadius, double outerRadius, List<Edge> traversingBusEdges, List<Injection> traversingInjections,
+                                            Graph graph, VoltageLevelNode vlNode, BusNode busNode) {
+        if (traversingBusEdges.isEmpty() && traversingInjections.isEmpty()) {
             String path = "M" + getCirclePath(outerRadius, 0, Math.PI, true)
                     + " M" + getCirclePath(outerRadius, Math.PI, 0, true);
             if (innerRadius > 0) { // going the other way around (counter-clockwise) to subtract the inner circle
@@ -694,10 +999,12 @@ public class SvgWriter {
             return path;
         }
 
-        List<Double> angles = createSortedTraversingAnglesList(traversingBusEdges, graph, vlNode, busNode);
+        List<Double> angles = createTraversingEdgesAnglesList(traversingBusEdges, graph, vlNode, busNode);
+        traversingInjections.forEach(ti -> angles.add(ti.getAngle()));
+        Collections.sort(angles);
 
         // adding first angle to close the circle annulus, and adding 360° to keep the list ordered
-        angles.add(angles.get(0) + 2 * Math.PI);
+        angles.add(angles.getFirst() + 2 * Math.PI);
 
         double halfWidth = svgParameters.getNodeHollowWidth() / 2;
         double deltaAngle0 = halfWidth / outerRadius;
@@ -719,7 +1026,7 @@ public class SvgWriter {
         return path.toString();
     }
 
-    private List<Double> createSortedTraversingAnglesList(List<Edge> traversingBusEdges, Graph graph, VoltageLevelNode vlNode, BusNode busNode) {
+    private List<Double> createTraversingEdgesAnglesList(List<Edge> traversingBusEdges, Graph graph, VoltageLevelNode vlNode, BusNode busNode) {
         List<Double> angles = new ArrayList<>(traversingBusEdges.size());
         for (Edge edge : traversingBusEdges) {
             Node node1 = graph.getNode1(edge);
@@ -736,14 +1043,15 @@ public class SvgWriter {
                 angles.add(getEdgeStartAngle(edge, node1 == vlNode ? BranchEdge.Side.ONE : BranchEdge.Side.TWO));
             }
         }
-        Collections.sort(angles);
-
         return angles;
     }
 
     private boolean isBusNodeDrawn(Node busGraphNode, BusNode busNodeCurrentlyDrawn) {
-        if (busGraphNode instanceof BusNode) {
-            return ((BusNode) busGraphNode).getIndex() < busNodeCurrentlyDrawn.getIndex();
+        if (busGraphNode == BusNode.UNKNOWN) {
+            return false;
+        }
+        if (busGraphNode instanceof BusNode busGraphBusNode) {
+            return busGraphBusNode.getRingIndex() < busNodeCurrentlyDrawn.getRingIndex();
         }
         return true;
     }
@@ -783,19 +1091,17 @@ public class SvgWriter {
         writer.writeStartElement(GROUP_ELEMENT_NAME);
         writer.writeAttribute(CLASS_ATTRIBUTE, StyleProvider.TEXT_EDGES_CLASS);
         for (TextEdge edge : graph.getTextEdges()) {
-            drawTextEdge(writer, edge, graph.getVoltageLevelNode(edge));
+            drawTextEdge(writer, edge);
         }
         writer.writeEndElement();
     }
 
-    private void drawTextEdge(XMLStreamWriter writer, TextEdge edge, VoltageLevelNode vlNode) throws XMLStreamException {
+    private void drawTextEdge(XMLStreamWriter writer, TextEdge edge) throws XMLStreamException {
         writer.writeEmptyElement(POLYLINE_ELEMENT_NAME);
         writeId(writer, edge);
-        writeStyleClasses(writer, styleProvider.getEdgeStyleClasses(edge));
         List<Point> points = edge.getPoints();
-        shiftEdgeStart(points, vlNode);
         String lineFormatted1 = points.stream()
-                .map(point -> getFormattedValue(point.getX()) + "," + getFormattedValue(point.getY()))
+                .map(point -> getFormattedValue(point.x()) + "," + getFormattedValue(point.y()))
                 .collect(Collectors.joining(" "));
         writer.writeAttribute(POINTS_ATTRIBUTE, lineFormatted1);
     }
@@ -813,13 +1119,14 @@ public class SvgWriter {
         writer.writeAttribute(CLASS_ATTRIBUTE, String.join(" ", allClasses));
     }
 
-    private void writeId(XMLStreamWriter writer, Identifiable identifiable) throws XMLStreamException {
-        writer.writeAttribute(ID_ATTRIBUTE, getPrefixedId(identifiable.getDiagramId()));
+    private void writeStyleAttribute(XMLStreamWriter writer, String style) throws XMLStreamException {
+        if (!StringUtils.isEmpty(style)) {
+            writer.writeAttribute(STYLE_ATTRIBUTE, style);
+        }
     }
 
-    private void shiftEdgeStart(List<Point> points, VoltageLevelNode vlNode) {
-        double circleRadius = getVoltageLevelCircleRadius(vlNode);
-        points.set(0, points.get(0).atDistance(circleRadius, points.get(1)));
+    private void writeId(XMLStreamWriter writer, Identifiable identifiable) throws XMLStreamException {
+        writer.writeAttribute(ID_ATTRIBUTE, getPrefixedId(identifiable.getSvgId()));
     }
 
     private void addSvgRoot(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
@@ -836,21 +1143,12 @@ public class SvgWriter {
     private double[] getDiagramDimensions(Graph graph) {
         double width = getDiagramWidth(graph);
         double height = getDiagramHeight(graph);
-        double scale;
-        switch (svgParameters.getSizeConstraint()) {
-            case FIXED_WIDTH:
-                scale = svgParameters.getFixedWidth() / width;
-                break;
-            case FIXED_HEIGHT:
-                scale = svgParameters.getFixedHeight() / height;
-                break;
-            case FIXED_SCALE:
-                scale = svgParameters.getFixedScale();
-                break;
-            default:
-                scale = 1;
-                break;
-        }
+        double scale = switch (svgParameters.getSizeConstraint()) {
+            case FIXED_WIDTH -> svgParameters.getFixedWidth() / width;
+            case FIXED_HEIGHT -> svgParameters.getFixedHeight() / height;
+            case FIXED_SCALE -> svgParameters.getFixedScale();
+            default -> 1;
+        };
         return new double[] {width * scale, height * scale};
     }
 
@@ -875,14 +1173,16 @@ public class SvgWriter {
         switch (svgParameters.getCssLocation()) {
             case INSERTED_IN_SVG:
                 writer.writeStartElement(STYLE_ELEMENT_NAME);
-                writer.writeCData(styleProvider.getStyleDefs());
+                String cssContent = CssUtil.getFilesContent(styleProvider.getCssUrls())
+                        + CssUtil.getFilesContent(componentLibrary.getCssUrls());
+                writer.writeCData(cssContent);
                 writer.writeEndElement();
                 break;
             case EXTERNAL_IMPORTED:
                 writer.writeStartElement(STYLE_ELEMENT_NAME);
-                for (String cssFilename : styleProvider.getCssFilenames()) {
-                    writer.writeCharacters("@import url(" + cssFilename + ");");
-                }
+                String cssImports = CssUtil.getImportCssString(styleProvider.getCssFilenames())
+                        + CssUtil.getImportCssString(componentLibrary.getCssFilenames());
+                writer.writeCharacters(cssImports);
                 writer.writeEndElement();
                 break;
             case EXTERNAL_NO_IMPORT:
@@ -891,53 +1191,8 @@ public class SvgWriter {
         }
     }
 
-    private void addMetadata(Graph graph, XMLStreamWriter writer) throws XMLStreamException {
-        DiagramMetadata metadata = new DiagramMetadata();
-
-        graph.getBusNodesStream().forEach(busNode -> metadata.addBusNode(getPrefixedId(busNode.getDiagramId()), busNode.getEquipmentId()));
-        graph.getNodesStream().forEach(node -> metadata.addNode(getPrefixedId(node.getDiagramId()), node.getEquipmentId(),
-                getFormattedValue(node.getX()), getFormattedValue(node.getY())));
-        graph.getBranchEdgeStream().forEach(edge -> metadata.addEdge(getPrefixedId(edge.getDiagramId()), edge.getEquipmentId(),
-                getPrefixedId(graph.getNode1(edge).getDiagramId()),
-                getPrefixedId(graph.getNode2(edge).getDiagramId())));
-        graph.getThreeWtEdgesStream().forEach(edge -> metadata.addEdge(getPrefixedId(edge.getDiagramId()), edge.getEquipmentId(),
-                getPrefixedId(graph.getNode1(edge).getDiagramId()),
-                getPrefixedId(graph.getNode2(edge).getDiagramId())));
-
-        writer.writeStartElement(METADATA_ELEMENT_NAME);
-        metadata.writeXml(writer);
-        writer.writeEndElement();
-    }
-
     private static String getFormattedValue(double value) {
         return String.format(Locale.US, "%.2f", value);
-    }
-
-    protected double getVoltageLevelCircleRadius(VoltageLevelNode vlNode) {
-        return getVoltageLevelCircleRadius(vlNode, svgParameters);
-    }
-
-    protected static double getVoltageLevelCircleRadius(VoltageLevelNode vlNode, SvgParameters svgParameters) {
-        if (vlNode.isFictitious()) {
-            return svgParameters.getFictitiousVoltageLevelCircleRadius();
-        }
-        int nbBuses = vlNode.getBusNodes().size();
-        return Math.min(Math.max(nbBuses, 1), 2) * svgParameters.getVoltageLevelCircleRadius();
-    }
-
-    public static double getBusAnnulusInnerRadius(BusNode node, VoltageLevelNode vlNode, SvgParameters svgParameters) {
-        if (node.getIndex() == 0) {
-            return 0;
-        }
-        int nbNeighbours = node.getNbNeighbouringBusNodes();
-        double unitaryRadius = SvgWriter.getVoltageLevelCircleRadius(vlNode, svgParameters) / (nbNeighbours + 1);
-        return node.getIndex() * unitaryRadius + svgParameters.getInterAnnulusSpace() / 2;
-    }
-
-    public static double getBusAnnulusOuterRadius(BusNode node, VoltageLevelNode vlNode, SvgParameters svgParameters) {
-        int nbNeighbours = node.getNbNeighbouringBusNodes();
-        double unitaryRadius = SvgWriter.getVoltageLevelCircleRadius(vlNode, svgParameters) / (nbNeighbours + 1);
-        return (node.getIndex() + 1) * unitaryRadius - svgParameters.getInterAnnulusSpace() / 2;
     }
 
     public String getPrefixedId(String id) {
