@@ -6,22 +6,51 @@
  */
 package com.powsybl.sld.cgmes.layout;
 
-import com.powsybl.iidm.network.*;
-import com.powsybl.sld.cgmes.dl.iidm.extensions.*;
+import com.powsybl.iidm.network.Bus;
+import com.powsybl.iidm.network.BusbarSection;
+import com.powsybl.iidm.network.BoundaryLine;
+import com.powsybl.iidm.network.Generator;
+import com.powsybl.iidm.network.Line;
+import com.powsybl.iidm.network.Load;
+import com.powsybl.iidm.network.Network;
+import com.powsybl.iidm.network.ShuntCompensator;
+import com.powsybl.iidm.network.StaticVarCompensator;
+import com.powsybl.iidm.network.Switch;
+import com.powsybl.iidm.network.ThreeWindingsTransformer;
+import com.powsybl.iidm.network.TopologyKind;
+import com.powsybl.iidm.network.TwoWindingsTransformer;
+import com.powsybl.iidm.network.VoltageLevel;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.CouplingDeviceDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.DiagramPoint;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.InjectionDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.LineDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.NetworkDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.NodeDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.ThreeWindingsTransformerDiagramData;
+import com.powsybl.sld.cgmes.dl.iidm.extensions.VoltageLevelDiagramData;
 import com.powsybl.sld.layout.Layout;
 import com.powsybl.sld.model.coordinate.Orientation;
 import com.powsybl.sld.model.graphs.VoltageLevelGraph;
-import com.powsybl.sld.model.nodes.*;
+import com.powsybl.sld.model.nodes.BusNode;
+import com.powsybl.sld.model.nodes.ConnectivityNode;
+import com.powsybl.sld.model.nodes.Edge;
+import com.powsybl.sld.model.nodes.EquipmentNode;
+import com.powsybl.sld.model.nodes.FeederNode;
+import com.powsybl.sld.model.nodes.Node;
 import com.powsybl.sld.model.nodes.Node.NodeType;
+import com.powsybl.sld.model.nodes.SwitchNode;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.util.*;
+import java.util.Arrays;
+import java.util.List;
+import java.util.Map;
+import java.util.Optional;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import static com.powsybl.sld.library.ComponentTypeName.*;
+import static com.powsybl.sld.library.SldComponentTypeName.*;
 
 /**
  *
@@ -59,16 +88,16 @@ public abstract class AbstractCgmesLayout implements Layout {
         return graph;
     }
 
-    protected boolean checkDiagram(String diagramName, String equipment) {
+    protected boolean checkDiagramFails(String diagramName, String equipment) {
         if (diagramName == null) {
             LOG.warn("layout parameter diagramName not set: CGMES-DL layout will not be applied");
-            return false;
+            return true;
         }
         if (!NetworkDiagramData.containsDiagramName(network, diagramName)) {
             LOG.warn("diagram name {} not found in network: CGMES-DL layout will not be applied to network {}, {}", diagramName, network.getId(), equipment);
-            return false;
+            return true;
         }
-        return true;
+        return false;
     }
 
     protected void setNodeCoordinates(VoltageLevel vl, VoltageLevelGraph graph, String diagramName, boolean useNames) {
@@ -80,13 +109,13 @@ public abstract class AbstractCgmesLayout implements Layout {
     }
 
     protected boolean isLineNode(Node node) {
-        return Arrays.asList(LINE, DANGLING_LINE, VSC_CONVERTER_STATION, LCC_CONVERTER_STATION).contains(node.getComponentType());
+        return Arrays.asList(LINE, BOUNDARY_LINE, VSC_CONVERTER_STATION, LCC_CONVERTER_STATION).contains(node.getComponentType());
     }
 
     protected void setNodeCoordinates(VoltageLevel vl, Node node, String diagramName, boolean useNames) {
-        LOG.info("Setting coordinates of node {}, type {}, component type {}", node.getId(), node.getType(), node.getComponentType());
+        logSettingCoordinates(node);
         switch (node.getType()) {
-            case BUS:
+            case BUS -> {
                 BusNode busNode = (BusNode) node;
                 if (TopologyKind.NODE_BREAKER.equals(vl.getTopologyKind())) {
                     BusbarSection busbar = vl.getConnectable(busNode.getId(), BusbarSection.class);
@@ -97,21 +126,17 @@ public abstract class AbstractCgmesLayout implements Layout {
                     NodeDiagramData<Bus> busDiagramData = bus != null ? bus.getExtension(NodeDiagramData.class) : null;
                     setBusNodeCoordinates(busNode, busDiagramData, diagramName);
                 }
-                break;
-            case SWITCH:
+            }
+            case SWITCH -> {
                 SwitchNode switchNode = (SwitchNode) node;
                 Switch sw = TopologyKind.NODE_BREAKER.equals(vl.getTopologyKind()) ?
                             vl.getNodeBreakerView().getSwitch(switchNode.getId()) :
                             vl.getBusBreakerView().getSwitch(switchNode.getId());
                 CouplingDeviceDiagramData<Switch> switchDiagramData = sw != null ? sw.getExtension(CouplingDeviceDiagramData.class) : null;
                 setCouplingDeviceNodeCoordinates(switchNode, switchDiagramData, true, diagramName);
-                break;
-            case FEEDER:
-                setFeederNodeCoordinates(vl, node, diagramName, useNames);
-                break;
-            default:
-                processDefaultNodeCase(vl, node, diagramName);
-                break;
+            }
+            case FEEDER -> setFeederNodeCoordinates(vl, node, diagramName, useNames);
+            default -> processDefaultNodeCase(vl, node, diagramName);
         }
     }
 
@@ -122,8 +147,8 @@ public abstract class AbstractCgmesLayout implements Layout {
             if (iidmEquivalentNode.isPresent()) {
                 DiagramPoint nodePoint = VoltageLevelDiagramData.getInternalNodeDiagramPoint(vl, diagramName, iidmEquivalentNode.get());
                 if (nodePoint != null) {
-                    node.setX(nodePoint.getX());
-                    node.setY(nodePoint.getY());
+                    node.setX(nodePoint.x());
+                    node.setY(nodePoint.y());
                     return;
                 }
             }
@@ -158,14 +183,14 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     protected void setBusNodeCoordinates(BusNode node, NodeDiagramData<?> diagramData, String diagramName) {
         if (diagramData != null) {
-            NodeDiagramData<?>.NodeDiagramDataDetails diagramDetails = diagramData.getData(diagramName);
+            NodeDiagramData.NodeDiagramDataDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
-                node.setX(diagramDetails.getPoint1().getX());
-                node.setY(diagramDetails.getPoint1().getY());
+                node.setX(diagramDetails.getPoint1().x());
+                node.setY(diagramDetails.getPoint1().y());
                 node.setPxWidth(computeBusWidth(diagramDetails));
-                rotatedBus = diagramDetails.getPoint1().getX() == diagramDetails.getPoint2().getX();
+                rotatedBus = diagramDetails.getPoint1().x() == diagramDetails.getPoint2().x();
                 node.setOrientation(rotatedBus ? Orientation.UP : Orientation.RIGHT);
-                setMin(diagramDetails.getPoint1().getX(), diagramDetails.getPoint1().getY());
+                setMin(diagramDetails.getPoint1().x(), diagramDetails.getPoint1().y());
             } else {
                 LOG.warn("No CGMES-DL data for {} node {}, bus {}, diagramName {}", node.getType(), node.getId(), node.getName(), diagramName);
             }
@@ -176,12 +201,12 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     protected void setCouplingDeviceNodeCoordinates(EquipmentNode node, CouplingDeviceDiagramData<?> diagramData, boolean rotate, String diagramName) {
         if (diagramData != null) {
-            CouplingDeviceDiagramData<?>.CouplingDeviceDiagramDetails diagramDetails = diagramData.getData(diagramName);
+            CouplingDeviceDiagramData.CouplingDeviceDiagramDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
-                node.setX(diagramDetails.getPoint().getX());
-                node.setY(diagramDetails.getPoint().getY());
+                node.setX(diagramDetails.getPoint().x());
+                node.setY(diagramDetails.getPoint().y());
                 setOrientation(node, rotate, diagramDetails.getRotation());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                setMin(diagramDetails.getPoint().x(), diagramDetails.getPoint().y());
             } else {
                 LOG.warn("No CGMES-DL data for {} node {}, name {}, diagramName {}", node.getType(), node.getId(), node.getName(), diagramName);
             }
@@ -191,11 +216,11 @@ public abstract class AbstractCgmesLayout implements Layout {
         }
     }
 
-    protected double computeBusWidth(NodeDiagramData<?>.NodeDiagramDataDetails diagramData) {
-        if (diagramData.getPoint1().getX() == diagramData.getPoint2().getX()) {
-            return Math.abs(diagramData.getPoint1().getY() - diagramData.getPoint2().getY());
+    protected double computeBusWidth(NodeDiagramData.NodeDiagramDataDetails diagramData) {
+        if (diagramData.getPoint1().x() == diagramData.getPoint2().x()) {
+            return Math.abs(diagramData.getPoint1().y() - diagramData.getPoint2().y());
         } else {
-            return Math.abs(diagramData.getPoint1().getX() - diagramData.getPoint2().getX());
+            return Math.abs(diagramData.getPoint1().x() - diagramData.getPoint2().x());
         }
     }
 
@@ -204,34 +229,40 @@ public abstract class AbstractCgmesLayout implements Layout {
             case LOAD:
                 FeederNode loadNode = (FeederNode) node;
                 Load load = vl.getConnectable(loadNode.getId(), Load.class);
-                InjectionDiagramData<Load> loadDiagramData = load != null ? load.getExtension(InjectionDiagramData.class) : null;
+                InjectionDiagramData<Load> loadDiagramData = load != null
+                        ? load.getExtension(InjectionDiagramData.class)
+                        : null;
                 setInjectionNodeCoordinates(loadNode, loadDiagramData, true, diagramName);
                 break;
             case GENERATOR:
                 FeederNode generatorNode = (FeederNode) node;
                 Generator generator = vl.getConnectable(generatorNode.getId(), Generator.class);
-                InjectionDiagramData<Generator> generatorDiagramData = generator != null ? generator.getExtension(InjectionDiagramData.class) : null;
+                InjectionDiagramData<Generator> generatorDiagramData = generator != null
+                        ? generator.getExtension(InjectionDiagramData.class)
+                        : null;
                 setInjectionNodeCoordinates(generatorNode, generatorDiagramData, false, diagramName);
                 break;
-            case CAPACITOR:
-            case INDUCTOR:
+            case CAPACITOR, INDUCTOR:
                 FeederNode shuntNode = (FeederNode) node;
                 ShuntCompensator shunt = vl.getConnectable(shuntNode.getId(), ShuntCompensator.class);
-                InjectionDiagramData<ShuntCompensator> shuntDiagramData = shunt != null ? shunt.getExtension(InjectionDiagramData.class) : null;
+                InjectionDiagramData<ShuntCompensator> shuntDiagramData = shunt != null
+                        ? shunt.getExtension(InjectionDiagramData.class)
+                        : null;
                 setInjectionNodeCoordinates(shuntNode, shuntDiagramData, true, diagramName);
                 break;
             case STATIC_VAR_COMPENSATOR:
                 FeederNode svcNode = (FeederNode) node;
                 StaticVarCompensator svc = vl.getConnectable(svcNode.getId(), StaticVarCompensator.class);
-                InjectionDiagramData<StaticVarCompensator> svcDiagramData = svc != null ? svc.getExtension(InjectionDiagramData.class) : null;
+                InjectionDiagramData<StaticVarCompensator> svcDiagramData = svc != null
+                        ? svc.getExtension(InjectionDiagramData.class)
+                        : null;
                 setInjectionNodeCoordinates(svcNode, svcDiagramData, true, diagramName);
                 break;
-            case TWO_WINDINGS_TRANSFORMER:
-            case PHASE_SHIFT_TRANSFORMER:
-            case TWO_WINDINGS_TRANSFORMER_LEG:
-            case PHASE_SHIFT_TRANSFORMER_LEG:
+            case TWO_WINDINGS_TRANSFORMER, PHASE_SHIFT_TRANSFORMER, TWO_WINDINGS_TRANSFORMER_LEG,
+                    PHASE_SHIFT_TRANSFORMER_LEG:
                 FeederNode transformerNode = (FeederNode) node;
-                TwoWindingsTransformer transformer = vl.getConnectable(transformerNode.getEquipmentId(), TwoWindingsTransformer.class);
+                TwoWindingsTransformer transformer = vl.getConnectable(transformerNode.getEquipmentId(),
+                        TwoWindingsTransformer.class);
                 CouplingDeviceDiagramData<TwoWindingsTransformer> transformerDiagramData = null;
                 if (transformer != null) {
                     transformerDiagramData = transformer.getExtension(CouplingDeviceDiagramData.class);
@@ -239,8 +270,10 @@ public abstract class AbstractCgmesLayout implements Layout {
                 }
                 setCouplingDeviceNodeCoordinates(transformerNode, transformerDiagramData, false, diagramName);
                 break;
-            case THREE_WINDINGS_TRANSFORMER:
-            case THREE_WINDINGS_TRANSFORMER_LEG:
+            case THREE_WINDINGS_TRANSFORMER, THREE_WINDINGS_TRANSFORMER_LEG, THREE_WINDINGS_TRANSFORMER_PST_1,
+                    THREE_WINDINGS_TRANSFORMER_PST_2, THREE_WINDINGS_TRANSFORMER_PST_3,
+                    THREE_WINDINGS_TRANSFORMER_PST_1_2, THREE_WINDINGS_TRANSFORMER_PST_1_3,
+                    THREE_WINDINGS_TRANSFORMER_PST_2_3, THREE_WINDINGS_TRANSFORMER_PST_1_2_3:
                 FeederNode transformer3wNode = (FeederNode) node;
                 ThreeWindingsTransformer transformer3w = vl.getConnectable(transformer3wNode.getEquipmentId(), ThreeWindingsTransformer.class);
                 ThreeWindingsTransformerDiagramData transformer3wDiagramData = null;
@@ -264,12 +297,12 @@ public abstract class AbstractCgmesLayout implements Layout {
 
     protected void setInjectionNodeCoordinates(FeederNode node, InjectionDiagramData<?> diagramData, boolean rotate, String diagramName) {
         if (diagramData != null) {
-            InjectionDiagramData<?>.InjectionDiagramDetails diagramDetails = diagramData.getData(diagramName);
+            InjectionDiagramData.InjectionDiagramDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
-                node.setX(diagramDetails.getPoint().getX());
-                node.setY(diagramDetails.getPoint().getY());
+                node.setX(diagramDetails.getPoint().x());
+                node.setY(diagramDetails.getPoint().y());
                 setOrientation(node, rotate, diagramDetails.getRotation());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                setMin(diagramDetails.getPoint().x(), diagramDetails.getPoint().y());
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, injection {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -295,9 +328,9 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (diagramData != null) {
             ThreeWindingsTransformerDiagramData.ThreeWindingsTransformerDiagramDataDetails diagramDetails = diagramData.getData(diagramName);
             if (diagramDetails != null) {
-                node.setX(diagramDetails.getPoint().getX());
-                node.setY(diagramDetails.getPoint().getY());
-                setMin(diagramDetails.getPoint().getX(), diagramDetails.getPoint().getY());
+                node.setX(diagramDetails.getPoint().x());
+                node.setY(diagramDetails.getPoint().y());
+                setMin(diagramDetails.getPoint().x(), diagramDetails.getPoint().y());
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, transformer {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -307,7 +340,7 @@ public abstract class AbstractCgmesLayout implements Layout {
     }
 
     protected void setLineNodeCoordinates(VoltageLevel vl, Node node, String diagramName) {
-        LOG.info("Setting coordinates of node {}, type {}, component type {}", node.getId(), node.getType(), node.getComponentType());
+        logSettingCoordinates(node);
         switch (node.getComponentType()) {
             case LINE:
                 FeederNode lineNode = (FeederNode) node;
@@ -315,11 +348,11 @@ public abstract class AbstractCgmesLayout implements Layout {
                 LineDiagramData<Line> lineDiagramData = line != null ? line.getExtension(LineDiagramData.class) : null;
                 setLineNodeCoordinates(lineNode, lineDiagramData, diagramName);
                 break;
-            case DANGLING_LINE:
-                FeederNode danglingLineNode = (FeederNode) node;
-                DanglingLine danglingLine = vl.getConnectable(danglingLineNode.getId(), DanglingLine.class);
-                LineDiagramData<DanglingLine> danglingLineDiagramData = danglingLine != null ? danglingLine.getExtension(LineDiagramData.class) : null;
-                setLineNodeCoordinates(danglingLineNode, danglingLineDiagramData, diagramName);
+            case BOUNDARY_LINE:
+                FeederNode boundaryLineNode = (FeederNode) node;
+                BoundaryLine boundaryLine = vl.getConnectable(boundaryLineNode.getId(), BoundaryLine.class);
+                LineDiagramData<BoundaryLine> boundaryLineDiagramData = boundaryLine != null ? boundaryLine.getExtension(LineDiagramData.class) : null;
+                setLineNodeCoordinates(boundaryLineNode, boundaryLineDiagramData, diagramName);
                 break;
             default:
                 break;
@@ -330,10 +363,10 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (diagramData != null) {
             if (diagramData.getDiagramsNames().contains(diagramName)) {
                 DiagramPoint linePoint = getLinePoint(diagramData, node, diagramName);
-                node.setX(linePoint.getX());
-                node.setY(linePoint.getY());
+                node.setX(linePoint.x());
+                node.setY(linePoint.y());
                 node.setOrientation(rotatedBus ? Orientation.RIGHT : Orientation.UP);
-                setMin(linePoint.getX(), linePoint.getY());
+                setMin(linePoint.x(), linePoint.y());
             } else {
                 LOG.warn("No CGMES-DL data for {} {} node {}, line {}, diagramName {}", node.getType(), node.getComponentType(), node.getId(), node.getName(), diagramName);
             }
@@ -347,10 +380,10 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (adjacentNodePoint == null) {
             return getLinePoint(lineDiagramData, true, diagramName);
         }
-        double firstPointDistance = Math.hypot(lineDiagramData.getFirstPoint(diagramName).getX() - adjacentNodePoint.getX(),
-                lineDiagramData.getFirstPoint(diagramName).getY() - adjacentNodePoint.getY());
-        double lastPointDistance = Math.hypot(lineDiagramData.getLastPoint(diagramName).getX() - adjacentNodePoint.getX(),
-                lineDiagramData.getLastPoint(diagramName).getY() - adjacentNodePoint.getY());
+        double firstPointDistance = Math.hypot(lineDiagramData.getFirstPoint(diagramName).x() - adjacentNodePoint.x(),
+                lineDiagramData.getFirstPoint(diagramName).y() - adjacentNodePoint.y());
+        double lastPointDistance = Math.hypot(lineDiagramData.getLastPoint(diagramName).x() - adjacentNodePoint.x(),
+                lineDiagramData.getLastPoint(diagramName).y() - adjacentNodePoint.y());
         return getLinePoint(lineDiagramData, firstPointDistance > lastPointDistance, diagramName);
     }
 
@@ -359,7 +392,7 @@ public abstract class AbstractCgmesLayout implements Layout {
         if (adjacentNodes == null || adjacentNodes.isEmpty()) {
             return null;
         }
-        Node adjacentNode = adjacentNodes.get(0); // as we are working on a single voltage level a line node should be connected to only 1 node
+        Node adjacentNode = adjacentNodes.getFirst(); // as we are working on a single voltage level a line node should be connected to only 1 node
         // a line should not be connected to another line, so I should already have the coordinates of the adjacent node
         return new DiagramPoint(adjacentNode.getX(), adjacentNode.getY(), 0);
     }
@@ -397,7 +430,7 @@ public abstract class AbstractCgmesLayout implements Layout {
                 .map(SwitchNode.class::cast)
                 .filter(node -> isFictitiousSwitchNode(node, vl))
                 .filter(node -> node.getAdjacentNodes().size() == 2)
-                .collect(Collectors.toList());
+                .toList();
         for (SwitchNode n : fictitiousSwithcNodesToRemove) {
             Node node1 = n.getAdjacentNodes().get(0);
             Node node2 = n.getAdjacentNodes().get(1);
@@ -412,5 +445,9 @@ public abstract class AbstractCgmesLayout implements Layout {
                 vl.getNodeBreakerView().getSwitch(node.getId()) :
                 vl.getBusBreakerView().getSwitch(node.getId());
         return sw == null || sw.isFictitious();
+    }
+
+    private void logSettingCoordinates(Node node) {
+        LOG.info("Setting coordinates of node {}, type {}, component type {}", node.getId(), node.getType(), node.getComponentType());
     }
 }
