@@ -11,7 +11,8 @@ import com.powsybl.sld.model.nodes.Node;
 import java.util.ArrayList;
 import java.util.List;
 
-import static com.powsybl.sld.model.blocks.Block.Extremity.*;
+import static com.powsybl.sld.model.blocks.Block.Extremity.END;
+import static com.powsybl.sld.model.blocks.Block.Extremity.START;
 
 /**
  * @author Benoit Jeanson {@literal <benoit.jeanson at rte-france.com>}
@@ -19,12 +20,12 @@ import static com.powsybl.sld.model.blocks.Block.Extremity.*;
  * @author Geoffroy Jamgotchian {@literal <geoffroy.jamgotchian at rte-france.com>}
  * @author Franck Lecuyer {@literal <franck.lecuyer at rte-france.com>}
  */
-abstract class AbstractParallelBlock extends AbstractComposedBlock {
+abstract class AbstractParallelBlock<T extends Block> extends AbstractComposedBlock<T> {
 
-    AbstractParallelBlock(Type type, List<Block> subBlocks, boolean allowMerge) {
+    AbstractParallelBlock(Type type, List<T> subBlocks, boolean allowMerge) {
         super(type, subBlocks);
         this.subBlocks = new ArrayList<>();
-        for (Block child : subBlocks) {
+        for (T child : subBlocks) {
             if (child.getType().isParallel() && allowMerge) {
                 this.subBlocks.addAll(((ComposedBlock) child).getSubBlocks());
             } else {
@@ -32,8 +33,8 @@ abstract class AbstractParallelBlock extends AbstractComposedBlock {
             }
         }
 
-        Node node0s = subBlocks.get(0).getExtremityNode(START);
-        Node node0e = subBlocks.get(0).getExtremityNode(END);
+        Node node0s = subBlocks.getFirst().getExtremityNode(START);
+        Node node0e = subBlocks.getFirst().getExtremityNode(END);
         for (Block b : this.subBlocks) {
             b.setParentBlock(this);
             if (b.getExtremityNode(START) != node0s && b.getExtremityNode(END) != node0e) {
@@ -41,7 +42,14 @@ abstract class AbstractParallelBlock extends AbstractComposedBlock {
             }
         }
 
-        setCardinality(START, this.subBlocks.stream().mapToInt(c -> c.getType().isParallel() ? c.getCardinality(START) : 1).sum());
-        setCardinality(END, this.subBlocks.stream().mapToInt(c -> c.getType().isParallel() ? c.getCardinality(END) : 1).sum());
+        setCardinality(START, this.subBlocks.stream().mapToInt(c -> c.getCardinality(START)).sum());
+        setCardinality(END, this.subBlocks.stream().mapToInt(c -> c.getCardinality(END)).sum());
+    }
+
+    @Override
+    public void replaceEndingNode(Node newEndingNode) {
+        for (Block subBlock : subBlocks) {
+            subBlock.replaceEndingNode(newEndingNode);
+        }
     }
 }
