@@ -11,16 +11,32 @@ import com.powsybl.iidm.network.*;
 import com.powsybl.sld.model.graphs.Graph;
 import com.powsybl.sld.model.graphs.VoltageLevelGraph;
 import com.powsybl.sld.model.graphs.VoltageLevelInfos;
-import com.powsybl.sld.model.nodes.*;
+import com.powsybl.sld.model.nodes.Edge;
+import com.powsybl.sld.model.nodes.EquipmentNode;
+import com.powsybl.sld.model.nodes.FeederNode;
+import com.powsybl.sld.model.nodes.Node;
 import com.powsybl.sld.model.nodes.Node.NodeType;
+import com.powsybl.sld.model.nodes.NodeSide;
+import com.powsybl.sld.model.nodes.SwitchNode;
 import com.powsybl.sld.model.nodes.feeders.FeederTwLeg;
+import com.powsybl.sld.svg.SvgParameters;
 import com.powsybl.sld.svg.styles.AbstractVoltageStyleProvider;
 import com.powsybl.sld.svg.styles.StyleClassConstants;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 import static com.powsybl.sld.svg.styles.StyleClassConstants.NODE_INFOS;
+import static com.powsybl.sld.svg.styles.StyleClassConstants.STYLE_PREFIX;
 
 /**
  * @author Giovanni Ferrari {@literal <giovanni.ferrari at techrain.eu>}
@@ -33,31 +49,51 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
     private final Map<String, Map<String, String>> vlBusIdStyleMap = new HashMap<>();
     private final Map<String, Integer> stylesIndices = new HashMap<>();
     private final Network network;
+    private final SvgParameters svgParameters;
+    private final boolean busHighlightOnHover;
 
     public TopologicalStyleProvider(Network network) {
-        this(BaseVoltagesConfig.fromPlatformConfig(), network);
+        this(BaseVoltagesConfig.fromPlatformConfig(), network, new SvgParameters());
     }
 
-    public TopologicalStyleProvider(BaseVoltagesConfig baseVoltagesConfig, Network network) {
+    public TopologicalStyleProvider(Network network, SvgParameters svgParameters) {
+        this(BaseVoltagesConfig.fromPlatformConfig(), network, svgParameters, false);
+    }
+
+    public TopologicalStyleProvider(BaseVoltagesConfig baseVoltagesConfig, Network network, SvgParameters svgParameters) {
+        this(baseVoltagesConfig, network, svgParameters, false);
+    }
+
+    public TopologicalStyleProvider(Network network, boolean busHighlightOnHover) {
+        this(BaseVoltagesConfig.fromPlatformConfig(), network, new SvgParameters(), busHighlightOnHover);
+    }
+
+    public TopologicalStyleProvider(Network network, SvgParameters svgParameters, boolean busHighlightOnHover) {
+        this(BaseVoltagesConfig.fromPlatformConfig(), network, svgParameters, busHighlightOnHover);
+    }
+
+    public TopologicalStyleProvider(BaseVoltagesConfig baseVoltagesConfig, Network network, SvgParameters svgParameters, boolean busHighlightOnHover) {
         super(baseVoltagesConfig);
         this.network = network;
+        this.svgParameters = svgParameters;
+        this.busHighlightOnHover = busHighlightOnHover;
     }
 
     @Override
-    protected Optional<String> getVoltageLevelEdgeStyle(Graph graph, Edge edge) {
+    protected List<String> getVoltageLevelEdgeStyles(Graph graph, Edge edge) {
         Node node1 = edge.getNode1();
         Node node2 = edge.getNode2();
         if (node1.getType() == NodeType.SWITCH && ((SwitchNode) node1).isOpen()) {
-            return getSwitchEdgeStyle(graph, node2);
+            return getSwitchEdgeStyles(graph, node2);
         }
         if (node2.getType() == NodeType.SWITCH && ((SwitchNode) node2).isOpen()) {
-            return getSwitchEdgeStyle(graph, node1);
+            return getSwitchEdgeStyles(graph, node1);
         }
-        return super.getVoltageLevelEdgeStyle(graph, edge);
+        return super.getVoltageLevelEdgeStyles(graph, edge);
     }
 
-    private Optional<String> getSwitchEdgeStyle(Graph graph, Node node) {
-        return graph.getVoltageLevelInfos(node) != null ? getVoltageLevelNodeStyle(graph.getVoltageLevelInfos(node), node) : Optional.empty();
+    private List<String> getSwitchEdgeStyles(Graph graph, Node node) {
+        return graph.getVoltageLevelInfos(node) != null ? getNodeStyles(graph.getVoltageLevelInfos(node), node) : List.of();
     }
 
     @Override
@@ -68,10 +104,12 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
     }
 
     private boolean isMultiTerminalNode(Node node) {
-        if (node instanceof EquipmentNode) {
-            Identifiable<?> identifiable = network.getIdentifiable(((EquipmentNode) node).getEquipmentId());
-            if (identifiable instanceof Connectable<?>) {
-                return ((Connectable<?>) identifiable).getTerminals().size() > 1;
+        if (node instanceof EquipmentNode equipmentNode) {
+            Identifiable<?> identifiable = network.getIdentifiable(equipmentNode.getEquipmentId());
+            if (identifiable instanceof Connectable<?> connectable) {
+                return connectable.getTerminals().size() > 1;
+            } else {
+                return identifiable instanceof VoltageLevel;
             }
         }
         return false;
@@ -83,28 +121,34 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
         vlBusIdStyleMap.clear();
     }
 
-    private Map<String, String> createBusIdStyleMap(String baseVoltageLevelStyle, String vlId) {
+    private Map<String, String> createBusIdStyleMap(String baseVoltageName, String vlId) {
+        String baseBusStyle = STYLE_PREFIX + "bus";
         List<Bus> buses = network.getVoltageLevel(vlId)
-                .getBusView().getBusStream().collect(Collectors.toList());
+                .getBusView().getBusStream().toList();
 
         Map<String, String> busIdStyleMap = new HashMap<>();
-        for (Bus b : buses) {
-            int newIndex = stylesIndices.compute(baseVoltageLevelStyle, (s, i) -> i == null ? 0 : i + 1);
-            String style = baseVoltageLevelStyle + '-' + newIndex;
-            busIdStyleMap.put(b.getId(), style);
+
+        if (svgParameters.isUnifyVoltageLevelColors()) {
+            for (int i = 0; i < buses.size(); i++) {
+                Bus bus = buses.get(i);
+                busIdStyleMap.put(bus.getId(), baseBusStyle + '-' + i);
+            }
+        } else {
+            for (Bus b : buses) {
+                int newIndex = stylesIndices.compute(baseVoltageName, (s, i) -> i == null ? 0 : i + 1);
+                String style = baseBusStyle + '-' + newIndex;
+                busIdStyleMap.put(b.getId(), style);
+            }
         }
 
         return busIdStyleMap;
     }
 
-    private Optional<String> getNodeTopologicalStyle(String baseVoltageLevelStyle, String vlId, Node node) {
-        Map<String, String> busIdStyleMap = vlBusIdStyleMap.computeIfAbsent(vlId, k -> createBusIdStyleMap(baseVoltageLevelStyle, vlId));
+    private String getNodeTopologicalStyle(String baseVoltageName, String vlId, Node node) {
+        Map<String, String> busIdStyleMap = vlBusIdStyleMap.computeIfAbsent(vlId, k -> createBusIdStyleMap(baseVoltageName, vlId));
         Map<String, String> nodeIdStyleMap = vlNodeIdStyleMap.computeIfAbsent(vlId, k -> new HashMap<>());
         String nodeTopologicalStyle = nodeIdStyleMap.get(node.getId());
-        if (nodeTopologicalStyle == null) {
-            nodeTopologicalStyle = findConnectedStyle(vlId, busIdStyleMap, nodeIdStyleMap, node);
-        }
-        return Optional.ofNullable(nodeTopologicalStyle);
+        return nodeTopologicalStyle != null ? nodeTopologicalStyle : findConnectedStyle(vlId, busIdStyleMap, nodeIdStyleMap, node);
     }
 
     private String findConnectedStyle(String vlId, Map<String, String> busIdStyleMap, Map<String, String> nodeIdStyleMap, Node node) {
@@ -128,7 +172,7 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
                             .collect(Collectors.toList());
                     if (terminals.size() == 1) {
                         // if more than one (vl-internal transformer), we don't know which side to take
-                        Bus bus = terminals.get(0).getBusView().getBus();
+                        Bus bus = terminals.getFirst().getBusView().getBus();
                         return bus != null ? bus.getId() : null;
                     }
                     return null;
@@ -139,7 +183,7 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
                 .orElse(StyleClassConstants.DISCONNECTED_STYLE_CLASS);
     }
 
-    private void findConnectedNodes(Node node, Set<Node> visitedNodes) {
+    protected void findConnectedNodes(Node node, Set<Node> visitedNodes) {
         if (visitedNodes.contains(node)) {
             return;
         }
@@ -161,32 +205,52 @@ public class TopologicalStyleProvider extends AbstractVoltageStyleProvider {
     }
 
     @Override
-    public Optional<String> getVoltageLevelNodeStyle(VoltageLevelInfos voltageLevelInfos, Node node) {
+    public List<String> getNodeStyles(VoltageLevelInfos voltageLevelInfos, Node node) {
+        List<String> nodeStyles = new ArrayList<>();
+        getVoltageLevelStyle(voltageLevelInfos).ifPresent(nodeStyles::add);
         if (node.getType() == NodeType.SWITCH && ((SwitchNode) node).isOpen()) {
-            return Optional.of(StyleClassConstants.DISCONNECTED_STYLE_CLASS);
+            nodeStyles.add(StyleClassConstants.DISCONNECTED_STYLE_CLASS);
+        } else {
+            getBaseVoltageName(voltageLevelInfos)
+                    .map(baseVoltageName -> getNodeTopologicalStyle(baseVoltageName, voltageLevelInfos.id(), node))
+                    .ifPresentOrElse(nodeStyles::add, () -> nodeStyles.add(StyleClassConstants.DISCONNECTED_STYLE_CLASS));
         }
-        String style = Optional.ofNullable(voltageLevelInfos)
-                .flatMap(vli -> baseVoltagesConfig.getBaseVoltageName(vli.getNominalVoltage(), BASE_VOLTAGE_PROFILE))
-                .flatMap(baseVoltageName -> getNodeTopologicalStyle(StyleClassConstants.STYLE_PREFIX + baseVoltageName, voltageLevelInfos.getId(), node))
-                .orElse(StyleClassConstants.DISCONNECTED_STYLE_CLASS);
-        return Optional.of(style);
+        return nodeStyles;
     }
 
     @Override
-    public Optional<String> getVoltageLevelNodeStyle(VoltageLevelInfos vlInfo, Node node, NodeSide side) {
-        return getVoltageLevelNodeStyle(vlInfo, node.getAdjacentNodes().get(side.getIntValue() - 1));
+    public List<String> getNodeStyles(VoltageLevelInfos vlInfo, Node node, NodeSide side) {
+        return getNodeStyles(vlInfo, node.getAdjacentNodes().get(side.getIntValue() - 1));
     }
 
     @Override
     public List<String> getBusStyles(String busId, VoltageLevelGraph graph) {
-        String busStyle = vlBusIdStyleMap.getOrDefault(graph.getVoltageLevelInfos().getId(), Collections.emptyMap())
+        List<String> busStyles = new ArrayList<>();
+        getVoltageLevelStyle(graph.getVoltageLevelInfos()).ifPresent(busStyles::add);
+        String busStyle = vlBusIdStyleMap.getOrDefault(graph.getVoltageLevelInfos().id(), Collections.emptyMap())
                 .getOrDefault(busId, null);
-        return busStyle != null ? List.of(busStyle, NODE_INFOS) : List.of(NODE_INFOS);
+        Optional.ofNullable(busStyle).ifPresent(busStyles::add);
+        busStyles.add(NODE_INFOS);
+        return busStyles;
+    }
+
+    private Optional<String> getVoltageLevelStyle(VoltageLevelInfos voltageLevelInfos) {
+        return getBaseVoltageName(voltageLevelInfos)
+                .map(baseVoltageName -> StyleClassConstants.STYLE_PREFIX + baseVoltageName);
+    }
+
+    private Optional<String> getBaseVoltageName(VoltageLevelInfos voltageLevelInfos) {
+        return Optional.ofNullable(voltageLevelInfos)
+                .flatMap(vli -> baseVoltagesConfig.getBaseVoltageName(vli.nominalVoltage(), BASE_VOLTAGE_PROFILE));
     }
 
     @Override
     public List<String> getCssFilenames() {
-        return Arrays.asList("tautologies.css", "topologicalBaseVoltages.css");
+        List<String> cssFilenames = new ArrayList<>(Arrays.asList("tautologies.css", "topologicalBaseVoltages.css"));
+        if (busHighlightOnHover) {
+            cssFilenames.add("busHighlight.css");
+        }
+        return cssFilenames;
     }
 
 }
